--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -122,9 +122,9 @@
 
 1916年。:star:1月1日袁世凯称帝。:star:3月23日取消帝制。:star:6月6日袁世凯去世，皖系军阀段祺瑞掌握了北洋政府。:star:孙中山举起“护法”旗帜（护法运动）。
 
-1917年。:star:1月蔡元培任北大校长，聘陈独秀为文科学长，《新青年》迁至北京。:star:3月俄国爆发二月革命。:star:4月6日，美国向德国宣战，次日向奥匈宣战。:star:6月张勋复辟（仅12天）。:star:8月14日大总统冯国璋在8月14日发布《大总统布告》，声明自当日上午10时起，对德国、奥匈帝国宣战。:star:9月在广州成立以孙中山为大元帅的护法军政府。:star:11月7日，**俄国十月革命**，苏维埃政权确立。
+1917年。:star:1月蔡元培任北大校长，聘陈独秀为文科学长，《新青年》迁至北京。:star:3月俄国爆发二月革命。:star:4月6日，美国向德国宣战，次日向奥匈宣战。:star:6月张勋复辟（仅12天）。:star:8月14日大总统冯国璋在8月14日发布《大总统布告》，声明自当日上午10时起，对德国、奥匈帝国宣战。:star:9月在广州成立以孙中山为大元帅的护法军政府。:star:11月7日，**俄国十月革命**，苏维埃政权确立，苏俄内战。
 
-1918年。:star:5月21日，孙中山愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月11日一战结束。:star:11月李大钊《庶民的胜利》《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
+1918年。3月，苏俄 与同盟国达成协议，苏俄退出一战。:star:5月21日，孙中山看透了西南实力派名为护法、实为争夺地盘的面目，愤然离开广州去上海，护法运动失败。:star:7月，李大钊《法俄革命之比较观》（宣传了十月革命胜利的世界历史意义）。:star:11月11日一战结束。:star:11月李大钊《庶民的胜利》《布尔什维主义的胜利》（连同七月，三篇文章的发表，对于马克思主义在中国的传播起到了先导的作用）。
 
 1919年。:star:1月巴黎和会召开。:star:3月，共产国际（第三国际）成立。:star:5月五四运动。:star:6月5日上海工人罢工。:star:6月28日中国代表未出席巴黎和约的签字仪式。:star:9月李大钊《我的马克思主义观》（标志着马克思主义在中国进入比较系统的传播阶段）:star:旧民主主义革命时期至此结束，新民主主义革命时期的开端。
 
@@ -134,11 +134,11 @@
 
 1920年。:star:3月李大钊成立马克思主义学说研究会。:star:4月俄共来华会见陈李。:star:8月共产党早期组织在上海《新青年》编辑部成立，陈独秀为书记。:star:8月陈望道翻译的《共产党宣言》出版。:star:10月李大钊等在北京成立共产党早期组织，并在11月定名为中国共产党北京支部，李大钊任书记。:star:11月，上海机器工会。
 
-1921年。:star:苏维埃俄国内战结束，苏维埃俄国实现新经济政策。:star:7月23日，中国共产党第一次全国代表大会（**党一大**，上海，最后一天的会议转移到浙江嘉兴南湖的游船上举行，成立中国共产党，通过了中共第一个纲领和决议，没有区分民主革命和社会主义革命）。:star:9月中国第一个农民协会，开展反抗地主压迫斗争
+1921年。:star:苏维埃俄国内战结束，苏维埃俄国实现新经济政策，取代了战时共产主义（向社会主义过渡的经济政策，以征收粮食税代替余粮收集制，允许外资企业管理国家暂时无力经营的企业，恢复商品货币关系，进行调节生产的作用，后来，因斯大林上台而被逐步取消）。:star:7月23日，中国共产党第一次全国代表大会（**党一大**，上海，最后一天的会议转移到浙江嘉兴南湖的游船上举行，成立中国共产党，通过了中共第一个纲领和决议，没有区分民主革命和社会主义革命）。:star:9月中国第一个农民协会，开展反抗地主压迫斗争
 
-1922年。:star:1月香港海员罢工。:star:6月粤系陈炯明叛乱，指使所部叛变，炮轰孙中山驻地后回任粤军总司令。:star:6月15日，中共中央发表《中国共产党对于时局的主张》，指出解决时局的关键，是用革命手段打倒帝国主义和封建军阀，建立民主政治，这是中国共产党第一次向社会各界公开自己的政治主张。:star:7月中国共产党第二次全国代表大会（**党二大**，上海，提出反帝反封建的民主革命纲领，区分了最高纲领和最低纲领，分清了民主主义革命与社会主义革命的界限，但不懂得新旧民主主义革命的界限，制定了第一部《中国共产党章程》，通过《中国共产党加入第三国际决议案》、《关于“民主的联合战线”的决议案》正式提出统一战线政策，决定中国共产党加入共产国际）。:star:12月30日苏联正式成立。
+1922年。:star:1月香港海员罢工。:star:6月粤系陈炯明叛乱，指使所部叛变，炮轰孙中山驻地后回任粤军总司令。:star:6月15日，中共中央发表《中国共产党对于时局的主张》，指出解决时局的关键，是用革命手段打倒帝国主义和封建军阀，建立民主政治，这是中国共产党第一次向社会各界公开自己的政治主张。:star:7月中国共产党第二次全国代表大会（**党二大**，上海，提出反帝反封建的民主革命纲领，区分了最高纲领和最低纲领，分清了民主主义革命与社会主义革命的界限，但不懂得新旧民主主义革命的界限，制定了第一部《中国共产党章程》，通过《中国共产党加入第三国际决议案》、《关于“民主的联合战线”的决议案》正式提出统一战线政策，决定中国共产党加入共产国际）。:star:12月，苏俄内战结束，30日，苏联正式成立。
 
-1923年。:star:1月孙中山与苏俄代表《孙文越飞联合宣言》。2:star:月京汉铁路工人罢工，成为工人运动第一次高潮的顶点，反动军阀进行血腥镇压，造成二七惨案。:star:6月，中国共产党第三次全国代表大会（**党三大**，广州，大会决定共产党员以个人身份加入国民党，以实现国共合作，大会规定共产党员加入国民党时，党必须在政治上、思想上、组织上保持自己的独立性，采取党内合作的形式同国民党建立联合战线，以完成反帝反封建的革命任务，没有提出无产阶级应当努力争取对民主革命的领导权的问题）。
+1923年。:star:1月孙中山与苏俄代表《孙文越飞联合宣言》。:star:2月，京汉铁路工人罢工，成为工人运动第一次高潮的顶点，反动军阀进行血腥镇压，造成二七惨案。:star:6月，中国共产党第三次全国代表大会（**党三大**，广州，大会决定共产党员以个人身份加入国民党，以实现国共合作，大会规定共产党员加入国民党时，党必须在政治上、思想上、组织上保持自己的独立性，采取党内合作的形式同国民党建立联合战线，以完成反帝反封建的革命任务，没有提出无产阶级应当努力争取对民主革命的领导权的问题）。
 
 1924年。:star:1月国民党一大（新三民主义，联俄联共，扶助和依靠农工，第一次国共合作的正式形成）。:star:1月陈炯明被滇、桂、粤联军组成的西路讨贼军击败率部退守东江（1925年国民革命军两次东征彻底消灭其势力）。:star:工人运动开始复兴。:star:创办黄埔军校。
 
@@ -150,7 +150,7 @@
 
 1926年到1927年3月，:star:仅10个月时间，国民革命军便从广州打到武汉、南京和上海，打垮了吴佩孚、孙传芳两大军阀，革命势力从珠江流域一直推进到长江流域。:star:到1927年6月，武汉政府的北伐军与北方国民军会师中原，革命势力便发展到黄河流域，席卷大半个中国。
 
-1927年，:star:3月蒋介石制造中山舰事件。:star:4月12日蒋介石上海**四一二反革命政变**，并在南京建立国民政府，国民政府宁汉分裂。4月李大钊牺牲。:star:4月中国共产党第五次全国代表大会（**党五大**，武汉，会议实际上并没有解决挽救时局的问题，修改党章，正式提出党内实行民主集中制的组织原则）。:star:7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作全面破裂，大革命失败。7月中共中央政治局常委会决定三件大事（土地革命兴起）。:star:8月7日中共秘密召开**八七会议**（汉口，确定了土地革命和武装起义方针、清算右倾机会主义错误，给正处于思想混乱和组织涣散的中国共产党指明了新的出路，这是由大革命失败到土地革命兴起的历史性转变）。:star:8月1日，**南昌起义**。:star:9月，宁汉合流。:star:9月9日，秋收起义（打出来“工农革命军”旗帜，攻打长沙受挫后南下向农村区域转移）。:star:9月底，三湾改编，从政治上、组织上保证了党对军队的绝对领导，标志着毛泽东建设人民军队思想的开始形成。:star:12月11日广州起义。
+1927年，:star:3月，蒋介石制造中山舰事件。:star:4月12日，蒋介石上海**四一二反革命政变**，并在南京建立国民政府，国民政府宁汉分裂。:star:4月，李大钊惨遭反动军阀绞杀。:star:4月中国共产党第五次全国代表大会（**党五大**，武汉，会议实际上并没有解决挽救时局的问题，修改党章，正式提出党内实行民主集中制的组织原则）。:star:7月15日汪精卫武汉国民政府发动七一五反革命政变，国共合作全面破裂，大革命失败。:star:7月，中共中央政治局常委会决定三件大事（土地革命兴起）。:star:8月7日中共秘密召开**八七会议**（汉口，确定了土地革命和武装起义方针、清算右倾机会主义错误，给正处于思想混乱和组织涣散的中国共产党指明了新的出路，这是由大革命失败到土地革命兴起的历史性转变）。:star:8月1日，**南昌起义**。:star:9月，宁汉合流。:star:9月9日，秋收起义（打出来“工农革命军”旗帜，攻打长沙受挫后南下向农村区域转移）。:star:9月底，三湾改编，从政治上、组织上保证了党对军队的绝对领导，标志着毛泽东建设人民军队思想的开始形成。:star:12月11日，广州起义。
 
 ## **1927~1937：:star:土地革命时期**
 
@@ -170,29 +170,29 @@
 
 1931年。:star:2月明确规定农民已经分得的田归农民个人所有，可以自主租借买卖（土地革命中的阶级路线和土地分配方法主要是：坚定地依靠贫农、雇农，联合中农，限制富农，保护中小工商业者.消灭地主阶级;以乡为单位，按人口平分土地，在原耕地的基础上.实行抽多补少、抽肥补瘦）。:star:2月汤山事件（约法之争上，蒋介石拘禁国民政府立法院长胡汉民，引起了中国国民党内部的公开分裂，造成了宁粤对立的局面）。:star:5月5日召开国民会议在会议上通过了《中华民国训政时期约法》（蒋介石随后又根据约法通过了《中华民国国民政府组织法》，确立了以国府主席为中心的集权体制，从法理上确保了蒋介石掌握至高无上的权力）。:star:5月汪精卫、孙科等人成立广州国民政府和蒋介石南京政府相对抗。:star:7月蒋介石提出“攘外必先安内”方针。:star:9月1日，广州国民政府下达总动员令，出师讨蒋（一度占领湖南衡州。旋因爆发九一八事变，被迫停战）。:star:9月18日，**九一八事变**。:star:9月20日中共中央号召全国农工武装起来。:star:11月中华苏维埃第一次全国工农兵代表大会举行，**中华苏维埃共和国**临时中央政府在江西中央苏区成立，主席毛泽东，定都瑞金（中央苏区-瑞金县），《中华苏维埃共和国宪法大纲》，红色中华通讯社成立（1937年1月改名为新华社）。:star:12月蒋介石下野、宁粤合流，但依旧没有弥合裂隙。:star:本年，经过三年多实践，党的**土地革命路线基本形成**，即：依靠贫农、雇农，联合中农，限制富农，消灭地主阶级，变封建土地所有制为农民土地所有制，保护中小工商业者，以乡为单位，按人口平分土地，在原耕地基础上，实行抽多补少、抽肥补瘦。
 
-1932年。:star:中共中央号召各界民众组织义勇军，支援国民党第十九路军的抗日作战。:star:1月5日广州国民政府宣布取消（但粤方势力新设西南两机关，继续维持割据状态，直到1936年两广事变和平解决为止。:star:1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始（粤系政府无法指挥，蒋介石复出任军事委员会委员长，汪精卫任行政院长）。:star:1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。:star:2月东北全境沦陷，“伪满洲国”。:star:4月15日中华苏维埃共和国临时中央政府宣布对日作战。年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。:star:11月，福建事变（国民党军第十九路军公开宣布抗日反蒋）。
+1932年。:star:中共中央号召各界民众组织义勇军，支援国民党第十九路军的抗日作战。:star:1月5日广州国民政府宣布取消（但粤方势力新设西南两机关，继续维持割据状态，直到1936年两广事变和平解决为止。:star:1月28日日本进攻上海（一·二八事变），第一次淞沪抗战开始（粤系政府无法指挥，蒋介石复出任军事委员会委员长，汪精卫任行政院长）。:star:1月，原西北军将领冯玉祥在张家口成立察哈尔民众抗日同盟军。:star:2月东北全境沦陷，“伪满洲国”。:star:4月15日中华苏维埃共和国临时中央政府宣布对日作战。:star:11月，福建事变（国民党军第十九路军公开宣布抗日反蒋）。:star:年底取得第四次反”围剿“成功，鄂豫皖、湘鄂西等根据地反“围剿”战争也取得重大胜利。:star:本年，苏联第一个五年计划完成，苏联从农业国变成工业国。
 
 1933年。:star:3月至5月长城抗战。:star:5月5日签订了《淞沪停战协定》（中国军队不能在上海布防，从而使上海门户大开）。:star:5月31日，中日《塘沽协定》（中国军队撤出长城以南大片地区）。:star:9月25日第五次反“围剿”。
 
 1934年。:star:1月福建事变失败。:star:10月，第五次反“围剿”失败，被迫实行战略性转移，**长征**。
 
-1935年。:star:华北事变（日本策动、拼凑了一些地方性傀儡政权）。:star:意大利入侵埃塞俄比亚。:star:1月**遵义会议**（确立以毛泽东正确路线的领导地位，坚持真理、修正错误，集中解决了在当时具有决定意义的军事问题和组织问题，事实上确立了毛泽东在党中央和红军的领导地位，开始确立以毛泽东同志为核心的党的第一代中央领导集体，在最危急关头挽救了党、挽救了红军、挽救了中国革命。遵义会议开启了中国共产党独立自主解决中国革命实际问题的新阶段）。:star:5月，中共西北特委组建中华苏维埃共和国西北联邦，中华苏维埃共和国政治体制演变为联邦制。:star:6月27日《察哈尔协定》丧失了察哈尔省主权，为日本吞并华北大开方便之门。8月1日，《为抗日救国告全体同胞书》（八一宣言，呼吁停止内战一致抗日）。:star:11月，中华苏维埃共和国变更对外名义称“中华苏维埃共和国中央政府西北办事处”。12月，中华苏维埃政权改国名为“中华苏维埃人民共和国”，宣布迁都延安。:star:12月9日，一二九运动(北平抗日游行、反对华北自治，标志着中国人民抗日救亡运动新高潮的到来）。:star:12月党的**瓦窑堡会议**（提出了在抗日条件下与民族资产阶级重建统一战线的新政策，批评了党内长期存在的“左”倾冒险主义、关门主义的错误倾向。会后，毛泽东作报告，系统阐述了这一新政策，阐述了民族资产阶级的两面性和大地主、大资产阶级可能的分化，强调了建立抗日民族统一战线的必要性和可能性，彻底解决了联合民族资产阶级的问题，开始解决党内的政治路线问题）。:star:12月毛泽东《论反对日本帝国主义的策略》（阐明了党的抗日民族统一战线新政策，系统说明了党的政治策略上的诸问题）。
+1935年。:star:华北事变（日本策动、拼凑了一些地方性傀儡政权）。:star:意大利入侵埃塞俄比亚。:star:1月**遵义会议**（确立以毛泽东正确路线的领导地位，坚持真理、修正错误，集中解决了在当时具有决定意义的军事问题和组织问题，事实上确立了毛泽东在党中央和红军的领导地位，开始确立以毛泽东同志为核心的党的第一代中央领导集体，在最危急关头挽救了党、挽救了红军、挽救了中国革命。遵义会议开启了中国共产党独立自主解决中国革命实际问题的新阶段）。:star:5月，中共西北特委组建中华苏维埃共和国西北联邦，中华苏维埃共和国政治体制演变为联邦制。:star:6月27日《察哈尔协定》丧失了察哈尔省主权，为日本吞并华北大开方便之门。:star:8月1日，《为抗日救国告全体同胞书》（八一宣言，呼吁停止内战一致抗日）。:star:11月，中华苏维埃共和国变更对外名义称“中华苏维埃共和国中央政府西北办事处”。:star:12月，中华苏维埃政权改国名为“中华苏维埃人民共和国”，宣布迁都延安。:star:12月9日，一二九运动(北平抗日游行、反对华北自治，标志着中国人民抗日救亡运动新高潮的到来）。:star:12月党的**瓦窑堡会议**（提出了在抗日条件下与民族资产阶级重建统一战线的新政策，批评了党内长期存在的“左”倾冒险主义、关门主义的错误倾向。会后，毛泽东作报告，系统阐述了这一新政策，阐述了民族资产阶级的两面性和大地主、大资产阶级可能的分化，强调了建立抗日民族统一战线的必要性和可能性，彻底解决了联合民族资产阶级的问题，开始解决党内的政治路线问题）。:star:12月毛泽东《论反对日本帝国主义的策略》（阐明了党的抗日民族统一战线新政策，系统说明了党的政治策略上的诸问题）。
 
-1936年。:star:5月毛朱《停战议和一致抗日通电》（放弃了“反蒋”口号，第一次公开把蒋介石作为联合对象）。6月至9月两广事变（两广军阀势力以抗日名义举兵反蒋，双方达成政治妥协而和平结束）:star:。10月红军会师，**长征结束**。:star:12月毛泽东《中国革命战争的战略问题》（总结土地革命战争中党内在军事问题上的争论，系统说明了有关中国战争战略方面的诸问题）。:star:12月12日**西安事变**（和平解决，十年内战基本结束）。
+1936年。:star:5月毛朱《停战议和一致抗日通电》（放弃了“反蒋”口号，第一次公开把蒋介石作为联合对象）。:star:6月至9月两广事变（两广军阀势力以抗日名义举兵反蒋，双方达成政治妥协而和平结束）:star:。10月红军会师，**长征结束**。:star:12月毛泽东《中国革命战争的战略问题》（总结土地革命战争中党内在军事问题上的争论，系统说明了有关中国战争战略方面的诸问题）。:star:12月12日**西安事变**（和平解决，十年内战基本结束）。
 
 1936年7月—1939年4月:star:西班牙内战（二战前奏，共和政府军与左翼联盟对抗以法西斯弗朗哥为中心的西班牙国民军右翼集团）。
 
 **1937年:star:全民族抗战开始**（抗日民族统一战线性质的政权）
 
-1937年。:star:2月国民党五届三中全会（国共两党第二次合作不可阻挡）。:star:夏，毛泽东《实践论》《矛盾论》（克服教条主义）。:star:7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，21天后北平沦陷。:star:8月国共两党达成协议（八路军、新四军）。:star:8月中共洛川会议（抗日救国十大纲领，全民族抗战）。:star:8月13日—11月12日，淞沪会战，上海沦陷。:star:9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”:star:。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。:star:9月—11月太原会战（9月八路军平型关大捷，11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位）。:star:9月22日国民党《中国共产党为公布国共合作宣言》。:star:9月23日蒋介石发表实际承认共产党合法地位的谈话。:star:11月华北战场忻口会战。:star:11月20日迁移国民政府于重庆。:star:11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。:star:12月南京沦陷（**南京大屠杀**）。
+1937年。:star:2月国民党五届三中全会（国共两党第二次合作不可阻挡）。:star:夏，毛泽东《实践论》《矛盾论》（克服教条主义）。:star:7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，21天后北平沦陷。:star:8月国共两党达成协议（八路军、新四军）。:star:8月中共洛川会议（抗日救国十大纲领，全民族抗战）。:star:8月13日—11月12日，淞沪会战，上海沦陷。:star:9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”:star:。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。:star:9月—11月太原会战（9月八路军平型关大捷，11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位）。:star:9月22日国民党《中国共产党为公布国共合作宣言》。:star:9月23日蒋介石发表实际承认共产党合法地位的谈话。:star:11月华北战场忻口会战。:star:11月20日迁移国民政府于重庆。:star:11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。:star:12月南京沦陷（**南京大屠杀**）。:star:本年，苏联第二个五年计划完成，苏联的工业生产总值跃居欧洲第一，世界第二。
 
 1938年。:star:1月至5月台儿庄战役、徐州会战。:star:5月毛泽东《论持久战》。:star:6月至10月武汉会战，武汉失守。:star:9月至11月，**中共六届六中全会**（明确提出了“马克思主义中国化”命题。会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为战略相持阶段，日本开始”以华制华“和”以战养战“策略。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月中国国民党副总裁汪精卫投降日本。
 
-1939年。:star:1月，毛泽东发表《新民主主义论》，系统阐述新民主主义理论，新民主主义理论的提出和系统阐明，是马克思主义中国化的重大理论成果，标志着毛泽东思想得到多方面展开而趋于成熟。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。9月1日德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，宪政运动（批评国民党一党专政）。:star:11月，苏芬战争。:star:12月毛泽东《中国革命和中国共产党》（第一次提出新民主主义革命的科学概念和总路线的内容）。
+1939年。:star:1月，毛泽东发表《新民主主义论》，系统阐述新民主主义理论，新民主主义理论的提出和系统阐明，是马克思主义中国化的重大理论成果，标志着毛泽东思想得到多方面展开而趋于成熟。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。:star:9月1日德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，宪政运动（批评国民党一党专政）。:star:11月，苏芬战争。:star:12月毛泽东《中国革命和中国共产党》（第一次提出新民主主义革命的科学概念和总路线的内容）。
 
 1940年。:star:3月汪精卫在南京成立**伪“中华民国国民政府”**。:star:3月苏芬战争结束。:star:4月9日德国攻击丹麦和挪威。:star:5月敦刻尔克大撤退。:star:6月22日，法国正式投降。:star:8月至次年1月，百团大战。:star:8月，创办延安自然科学院。:star:10月19日，国民政府致电(即“**皓电**”)八路军新四军对中国共产党及其领导的武装力量进行种种攻击和诬蔑（其中特别列举抗战以来华北、华中各地发生的摩擦事件，并将其原因归结于八路军和新四军），成为第二次反共高潮的起点。
 
-1941年。:star:1月皖南事变（国民党反动派在皖南有预谋地围袭新四军，反诬新四军“叛变”，宣布取消新四军番号，事变发生后，中共采取了坚决的斗争政策。不仅严厉谴责国民党顽固派的罪恶阴谋，而且严正地宣布重建新四军，国民党发动的第二次反共高潮）。:star:6月22日，**苏德战争爆发**。:star:3月，中国民主政团同盟成立（民盟）。:star:3月，八路军进驻了作为陕甘宁边区南大门的南泥湾，一边练兵，一边屯田垦荒，培育和形成了以艰苦奋斗、自力更生为核心的南泥湾精神。:star:5月毛泽东《改造我们的学习》，标志着**延安整风运动**的开始，反对主观主义（主观主义：教条主义、经验主义。最主要任务）以整顿学风，反对党派主义以整顿党风，反对党八股以整顿文风。:star:9月第二次长沙会战。:star:11月皖南事变而引起的一系列斗争结束。:star:12月7日**偷袭珍珠港**，太平洋战争爆发。
+1941年。:star:1月皖南事变（国民党反动派在皖南有预谋地围袭新四军，反诬新四军“叛变”，宣布取消新四军番号，事变发生后，中共采取了坚决的斗争政策。不仅严厉谴责国民党顽固派的罪恶阴谋，而且严正地宣布重建新四军，国民党发动的第二次反共高潮）。:star:3月，中国民主政团同盟成立（民盟）。:star:3月，八路军进驻了作为陕甘宁边区南大门的南泥湾，一边练兵，一边屯田垦荒，培育和形成了以艰苦奋斗、自力更生为核心的南泥湾精神。:star:5月毛泽东《改造我们的学习》，标志着**延安整风运动**的开始，反对主观主义（主观主义：教条主义、经验主义。最主要任务）以整顿学风，反对党派主义以整顿党风，反对党八股以整顿文风。:star:6月22日，**苏德战争爆发**。:star:9月第二次长沙会战。:star:11月皖南事变而引起的一系列斗争结束。:star:12月7日**偷袭珍珠港**，太平洋战争爆发。
 
 1942年。:star:1月《联合国家宣言》。:star:1月，第三次长沙会战（给日军有力打击）。:star:2月，中国**远征军**进入缅甸抗日。:star:2月《整顿党的作风》《反对党八股》（提出反对主观主义以整顿学风、反对宗派主义以整顿党风、反对党八股以整顿文风；整风运动在全党普遍展开）。:star:7月—次年2月，**斯大林格勒战役**（二战转折点）。:star:**中途岛海战**，太平洋战争转折点。
 
@@ -226,7 +226,7 @@
 
 ### **1949至1953年：:star:国民经济的恢复和初步发展时期。**
 
-1950年。:star:2月14日《中苏友好同盟互助条约》。:star:5月1日，新中国成立后制定的第一部法律《中华人民共和国婚姻法》。:star:5月1日，中共中央发出《关于在全党全军开展整风运动的指示》，全党开展以提高干部和一般党员的思想水平和政治水平，克服工作中所犯的错误，克服居功自傲和官僚主义、命令主义，改善党和人民的关系为主要任务的整风运动，至年底整风运动结束。:star:5月1日，海南岛解放。6月中共第七届三中全会，**《中华人民共和国土地改革法》**（保护富农政策），国民经济恢复时期的中心任务是争取国家财政经济状况的基本好转，**土地改革**（1950年至1953年春）。:star:6月，朝鲜内战。:star:10月**抗美援朝**。:star:10月10日 中共中央发出《关于镇压反革命活动的指示》，到1951年10月底，全国规模的镇压反革命运动基本结束。
+1950年。:star:2月14日《中苏友好同盟互助条约》。:star:5月1日，新中国成立后制定的第一部法律《中华人民共和国婚姻法》。:star:5月1日，中共中央发出《关于在全党全军开展整风运动的指示》，全党开展以提高干部和一般党员的思想水平和政治水平，克服工作中所犯的错误，克服居功自傲和官僚主义、命令主义，改善党和人民的关系为主要任务的整风运动，至年底整风运动结束。:star:5月1日，海南岛解放。:star:6月中共第七届三中全会，**《中华人民共和国土地改革法》**（保护富农政策），国民经济恢复时期的中心任务是争取国家财政经济状况的基本好转，**土地改革**（1950年至1953年春）。:star:6月，朝鲜内战。:star:10月**抗美援朝**。:star:10月10日 中共中央发出《关于镇压反革命活动的指示》，到1951年10月底，全国规模的镇压反革命运动基本结束。
 
 1951年。:star:5月西藏和平解放。:star:1951年底至1952年10月：“三反”运动（在中国共产党和国家机关内部开展的“反贪污 、反浪费、反官僚主义 ”的运动）。
 
@@ -258,7 +258,7 @@
 
 1961年。:star:1月**党的八届九中全会**（全会通过对国民经济实行“调整、巩固、充实、提高”的方针，国民经济转入调整的轨道）。:star:3月”农业六十条“，对农村政策进行调整；随后，工业、商业、手工业、科学、教育、文艺领域也进行调整，并相继制定了工作条例。
 
-1962年。:star:1一月”七千人大会“（总结了”大跃进“以来经济建设工作的经验教训，开展批评和自我批评，强调加强民主集中制，切实贯彻调整国民经济的方针，以迅速扭转国民经济困难的局面）。:star:10月**中印边境自卫反击战**，11月结束。
+1962年。:star:1月，”七千人大会“（总结了”大跃进“以来经济建设工作的经验教训，开展批评和自我批评，强调加强民主集中制，切实贯彻调整国民经济的方针，以迅速扭转国民经济困难的局面）。:star:10月**中印边境自卫反击战**，11月结束。
 
 1962年到1966年：:star:国民经济得到了比较顺利的恢复和发展。
 
@@ -282,7 +282,7 @@
 
 1971年。:star:8月15日布雷顿森林体系被尼克松政府宣告结束。:star:10月25日**重返联合国**，恢复中华人民共和国在联合国的一切合法权利，并立即把蒋介石集团的“代表”从联合国及其所属一切机构中驱逐出去。
 
-1972年。:star:周恩来提出批判极”左“思潮（使得各方面工作有了明显起色）。:star:2月，美国总统**尼克松访华**，中美双方在上海发表《联合公报》，标志两国关系正常化进程的开始。
+1972年。:star:周恩来提出批判极”左“思潮（使得各方面工作有了明显起色）。:star:2月，美国总统**尼克松访华**，之后中美双方在上海发表《联合公报》，标志两国关系正常化进程的开始。
 
 1973年。:star:3月，根据毛泽东的意见，周恩来主持中央政治局会议，决定邓小平正式参加国务院业务组工作，并以国务院副总理身份参加外事活动。:star:3月，美国撤离越南。:star:8月，中共第十次全国代表大会（**党十大**，继续肯定了中共九大的政治路线和组织路线），此后**”四人帮“**企图全面篡夺党和国家的最高权力。
 
@@ -310,7 +310,7 @@
 
 1982年。:star:1月1日明确指出包产到户、包干到户都是社会主义集体经济的生产责任制（**家庭联产承包责任制**）。:star:1月11日首次提出“一个国家，两种制度”概念。:star:12月4日，中华人民共和国第四部宪法（**八二宪法**，宪法4.0）在第五届全国人大第五次会议上正式通过并颁布。
 
-1982年。:star:9月中共第十二次全国代表大会（**党十二大**，胡耀邦《全面开创社会主义现代化建设的新局面》，社会主义现代化纲领，真正不结盟，提出了“建设有中国特色社会主义”的重大命题，制定了社会主义现代化建设的宏伟纲领，实行计划生育确立为中国的一项基本国策，提出处理党际关系的独立自主、完全平等、互相尊重和互不干涉内部事务四项原则）。9月1日—11日中国共产党第十二次全国代表大会举行（邓小平在致开幕词时提出，把马克思主义的普遍真理同我国的具体实际结合起来，走自己的道路，建设有中国特色的社会主义；《全面开创社会主义现代化建设的新局面》，提出分两步走，在20世纪末实现工农业年总产值翻两番的目标）。:star:9月24日，邓小平会见英国首相撒切尔夫人，阐述中国政府对香港问题的基本立场。指出，主权问题不是一个可以讨论的问题。
+1982年。:star:9月中共第十二次全国代表大会（**党十二大**，胡耀邦《全面开创社会主义现代化建设的新局面》，社会主义现代化纲领，真正不结盟，提出了“建设有中国特色社会主义”的重大命题，制定了社会主义现代化建设的宏伟纲领，实行计划生育确立为中国的一项基本国策，提出处理党际关系的独立自主、完全平等、互相尊重和互不干涉内部事务四项原则）。:star:9月1日—11日中国共产党第十二次全国代表大会举行（邓小平在致开幕词时提出，把马克思主义的普遍真理同我国的具体实际结合起来，走自己的道路，建设有中国特色的社会主义；《全面开创社会主义现代化建设的新局面》，提出分两步走，在20世纪末实现工农业年总产值翻两番的目标）。:star:9月24日，邓小平会见英国首相撒切尔夫人，阐述中国政府对香港问题的基本立场。指出，主权问题不是一个可以讨论的问题。
 
 1983年。:star:4月建立海南省、海南经济特区。:star:10月**废除人民公社**，建立乡（镇）政府作为基层政权，村民委员会。
 
@@ -378,7 +378,7 @@
 
 **2012年11月:star:党的十八大标志着进入中国特色社会主义新时代**
 
-2013年。:star:1月21日—22日 十八届中央纪委二次全会召开，习近平讲话强调，要坚持“老虎”、“苍蝇”一起打，既坚决查处领导干部违纪违法案件，又切实解决发生在群众身边的不正之风和腐败问题；要加强对权力运行的制约和监督，把权力关进制度的笼子里。:star:3月中华人民共和国**第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席**，李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。:star:3月习近平莫斯科演说首次提出**人类命运共同体**理念。3月，习近平指出，建设一支听党指挥、能打胜仗、作风优良的人民军队，是党在新形势下的强军目标。:star:3月17日，习近平在十二届全国人大一次会议闭幕会上讲话指出，实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福。实现中国梦，必须走中国道路、弘扬中国精神、凝聚中国力量。:star:6月，习近平明确提出信念坚定、为民服务、勤政务实、敢于担当、清正廉洁的好干部标准。9月7日、10月3日 ，习近平分别在哈萨克斯坦纳扎尔巴耶夫大学、印度尼西亚国会发表演讲，先后提出共同建设“丝绸之路经济带”与“21世纪海上丝绸之路”，即**“一带一路”**倡议。:star:11月，习近平在考察湖南时提出“**精准扶贫**”的理念。:star:11月15日，南水北调东线一期工程正式通水。12月11日，中共中央办公厅印发**《关于培育和践行社会主义核心价值观的意见》**。指出，富强、民主、文明、和谐，自由、平等、公正、法治，爱国、敬业、诚信、友善，是社会主义核心价值观的基本内容。
+2013年。:star:1月21日—22日 十八届中央纪委二次全会召开，习近平讲话强调，要坚持“老虎”、“苍蝇”一起打，既坚决查处领导干部违纪违法案件，又切实解决发生在群众身边的不正之风和腐败问题；要加强对权力运行的制约和监督，把权力关进制度的笼子里。:star:3月中华人民共和国**第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席**，李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。:star:3月习近平莫斯科演说首次提出**人类命运共同体**理念。:star:3月，习近平指出，建设一支听党指挥、能打胜仗、作风优良的人民军队，是党在新形势下的强军目标。:star:3月17日，习近平在十二届全国人大一次会议闭幕会上讲话指出，实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福。实现中国梦，必须走中国道路、弘扬中国精神、凝聚中国力量。:star:6月，习近平明确提出信念坚定、为民服务、勤政务实、敢于担当、清正廉洁的好干部标准。:star:9月7日、10月3日 ，习近平分别在哈萨克斯坦纳扎尔巴耶夫大学、印度尼西亚国会发表演讲，先后提出共同建设“丝绸之路经济带”与“21世纪海上丝绸之路”，即**“一带一路”**倡议。:star:11月，习近平在考察湖南时提出“**精准扶贫**”的理念。:star:11月15日，南水北调东线一期工程正式通水。:star:12月11日，中共中央办公厅印发**《关于培育和践行社会主义核心价值观的意见》**。指出，富强、民主、文明、和谐，自由、平等、公正、法治，爱国、敬业、诚信、友善，是社会主义核心价值观的基本内容。
 
 2014年。:star:2月习近平指出，努力把我国建设成为网络强国，强调要把握好网上舆论引导的时、度、效，使网络空间清朗起来。:star:2月，将12月13日设立为南京大屠杀死难者国家公祭日。:star:3月克里米亚独立公投其后被批准入俄。:star:4月乌克兰冲突。:star:4月15日，习近平在中央国家安全委员会第一次会议上讲话指出，要坚持总体国家安全观，以人民安全为宗旨，以政治安全为根本，以经济安全为基础，以军事、文化、社会安全为保障，以促进国际安全为依托，走出一条中国特色国家安全道路。:star:11月19日—21日，首届世界互联网大会在浙江乌镇召开，会议确定乌镇为世界互联网大会永久会址。:star:11月习近平提出推进**中国特色大国外交**的战略思想（要高举和平、发展、合作、共赢的旗帜，统筹国内国际两个大局，统筹发展安全两件大事，牢牢把握坚持和平发展、促进民族复兴这条主线，维护国家主权、安全、发展利益，为和平发展营造更加有利的国际环境，维护和延长我国发展的重要战略机遇期，为实现“两个一百年”奋斗目标、实现中华民族伟大复兴的中国梦提供有力保障）。:star:12月，习近平在江苏考察工作期间讲话指出，要主动把握和积极适应经济发展新常态，协调推进全面建成小康社会、全面深化改革、全面依法治国、全面从严治党。:star:12月12日，南水北调中线一期工程正式通水。
 
@@ -388,7 +388,7 @@
 
 2017年。:star:1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。:star:3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。:star:5月，“一带一路”国际合作高峰论坛在北京举行，强调要坚持以和平合作、开放包容、互学互鉴、互利共赢为核心的丝路精神，将“一带一路”建成和平、繁荣、开放、创新、文明之路。:star:10月，党的第十九次全国代表大会（**党十九大**，确立了习近平新时代中国特色社会主义思想的历史地位，把习近平新时代中国特色社会主义思想确立为党必须长期坚持的指导思想并庄严的写入党章；把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；**主要矛盾**：**人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾**；提出新时代坚持和发展中国特色社会主义的基本方略，确定决胜全面建成小康社会、开启全面建设社会主义现代化国家新征程的目标；2020到21世纪中叶两个阶段；党的建设；第二轮土地承包到期后再延长30年）。:star:11月8日－10日，美国总统特朗普对中国进行国事访问，习近平同特朗普会谈，强调中方愿同美方一道，相互尊重、互利互惠，聚焦合作、管控分歧，给两国人民带来更多获得感，给地区及世界人民带来更多获得感。:star:12月22日，习近平在中央军委扩大会议上阐明新时代党的强军思想，提出人民军队新时代使命任务：为巩固中国共产党领导和我国社会主义制度提供战略支撑，为捍卫国家主权、统一、领土完整提供战略支撑，为维护我国海外利益提供战略支撑，为促进世界和平与发展提供战略支撑。
 
-2018年。:star:1月11日，中共中央、国务院发出《关于开展扫黑除恶专项斗争的通知》。:star:1月11日－13日，十九届中央纪委二次全会举行，习近平讲话总结和阐述党的十八大以来全面从严治党的经验：坚持思想建党和制度治党相统一，坚持使命引领和问题导向相统一，坚持抓“关键少数”和管“绝大多数”相统一，坚持行使权力和担当责任相统一，坚持严格管理和关心信任相统一，坚持党内监督和群众监督相统一。:star:3月以来，针对美国政府单方面挑起的中美经贸摩擦，中国不得不采取中止关税减让义务、加征关税等反制措施，并在相互尊重、平等互利的原则基础上进行协商，坚决捍卫国家和人民利益。:star:3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。:star:4月17日，习近平主持召开十九届中央国家安全委员会第一次会议，强调全面贯彻落实总体国家安全观，必须坚持统筹发展和安全两件大事，坚持人民安全、政治安全、国家利益至上的有机统一，坚持立足于防，又有效处置风险，坚持维护和塑造国家安全，坚持科学统筹。:star:6月，上海合作组织青岛峰会举行，10日，习近平主持并讲话，强调要提倡创新、协调、绿色、开放、共享的发展观，践行共同、综合、合作、可持续的安全观，秉持开放、融通、互利、共赢的合作观，树立平等、互鉴、对话、包容的文明观，坚持共商共建共享的全球治理观，不断改革完善全球治理体系，推动各国携手建设人类命运共同体。:star:5月18日－19日，全国生态环境保护大会举行，习近平讲话提出新时代推进生态文明建设的原则，强调要加快构建生态文明体系，大会总结并阐述了习近平生态文明思想。:star:7月，中共中央政治局召开会议，提出做好“六稳”工作，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。
+2018年。:star:1月11日，中共中央、国务院发出《关于开展扫黑除恶专项斗争的通知》。:star:1月11日－13日，十九届中央纪委二次全会举行，习近平讲话总结和阐述党的十八大以来全面从严治党的经验：坚持思想建党和制度治党相统一，坚持使命引领和问题导向相统一，坚持抓“关键少数”和管“绝大多数”相统一，坚持行使权力和担当责任相统一，坚持严格管理和关心信任相统一，坚持党内监督和群众监督相统一。:star:3月以来，针对美国政府单方面挑起的中美经贸摩擦，中国不得不采取中止关税减让义务、加征关税等反制措施，并在相互尊重、平等互利的原则基础上进行协商，坚决捍卫国家和人民利益。:star:3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。:star:4月17日，习近平主持召开十九届中央国家安全委员会第一次会议，强调全面贯彻落实总体国家安全观，必须坚持统筹发展和安全两件大事，坚持人民安全、政治安全、国家利益至上的有机统一，坚持立足于防，又有效处置风险，坚持维护和塑造国家安全，坚持科学统筹。:star:5月18日－19日，全国生态环境保护大会举行，习近平讲话提出新时代推进生态文明建设的原则，强调要加快构建生态文明体系，大会总结并阐述了习近平生态文明思想。:star:6月，上海合作组织青岛峰会举行，10日，习近平主持并讲话，强调要提倡创新、协调、绿色、开放、共享的发展观，践行共同、综合、合作、可持续的安全观，秉持开放、融通、互利、共赢的合作观，树立平等、互鉴、对话、包容的文明观，坚持共商共建共享的全球治理观，不断改革完善全球治理体系，推动各国携手建设人类命运共同体。:star:7月，中共中央政治局召开会议，提出做好“六稳”工作，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。
 
 2019年。:star:1月2日，《告台湾同胞书》发表40周年纪念会举行，习近平发表《为实现民族伟大复兴、推进祖国和平统一而共同奋斗》的讲话，阐述立足新时代、在民族复兴伟大征程中推进祖国和平统一的5项重大政策主张：携手推动民族复兴，实现和平统一目标；探索“两制”台湾方案，丰富和平统一实践；坚持一个中国原则，维护和平统一前景；深化两岸融合发展，夯实和平统一基础；实现同胞心灵契合，增进和平统一认同。:star:6月香港爆发”修例风波“，以习近平同志为核心的党中央审时度势、果断决策，坚定支持香港特别行政区行政长官和政府及警队采取一系列举措，依法打击和惩治暴力犯罪活动，止暴制乱，恢复秩序。:star:7月5日，深化党和国家机构改革总结会议举行，习近平讲话指出，深化党和国家机构改革是对党和国家组织结构和管理体制的一次系统性、整体性重构，为完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化提供了有力组织保障。:star:10月，党的十九届四中全会，提出坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化的目标。:star:12月湖北省武汉市疾控中心通报发现，首例“不明原因”肺炎病例，此后上海广州北京等地都发现不明原因肺炎病例样本。
 
