--- a/politics/习思.md
+++ b/politics/习思.md
@@ -604,6 +604,7 @@
   - **第三，深化教育领域综合改革**
   - **第四，加强师德师风建设**
   - **第五，推进教育数字化**
+  - 2023年5月29日，中共中央政治局就建设教育强国进行第五次集体学习。习近平在主持学习时强调，我们要建设的教育强国，是中国特色社会主义教育强国，必须以坚持党对教育事业的全面领导为**根本保证**，以立德树人为**根本任务**，以为党育人、为国育才为**根本目标**，以服务中华民族伟大复兴为**重要使命**，以教育理念、体系、制度、内容、方法、治理现代化为**基本路径**，以支撑引领中国式现代化为**核心功能**，**最终**是办好人民满意的教育。
 - 实施**就业优先战略**
   - **就业是最基本的民生**。强化就业优先政策，健全就业促进机制，促进高质量充分就业
 - **健全社会保障体系**
@@ -830,6 +831,8 @@
 立法是法治的龙头环节。
 
 全民守法是法治社会的基础工程。
+
+中国特色社会主义法律体系：完备的法律规范体系，是中国特色社会主义法治体系的**前提**，是法治国家、法治政府、法治社会的**制度基础**；建设高效的法治实施体系，是建设中国特色社会主义法治体系的**重点**；有力的法治保障体系，是全面依法治国的**重要依托**；严密的法治监督体系，是宪法法律有效实施的**重要保障**。
 
 ## 全面从严治党
 
