--- a/politics/时政.md
+++ b/politics/时政.md
@@ -20,3 +20,11 @@
 - 我们要共同倡导弘扬全人类共同价值，和平、发展、公平、正义、民主、自由是各国人民的共同追求，要以宽广胸怀理解不同文明对价值内涵的认识，不将自己的价值观和模式强加于人，不搞意识形态对抗。
 - 我们要共同倡导重视文明传承和创新，充分挖掘各国历史文化的时代价值，推动各国优秀传统文化在现代化进程中实现创造性转化、创新性发展。
 - 我们要共同倡导加强国际人文交流合作，探讨构建全球文明对话合作网络，丰富交流内容，拓展合作渠道，促进各国人民相知相亲，共同推动人类文明发展进步。
+
+# 中国一中亚峰会
+
+习近平在中国一中亚峰会上发表的主旨讲话中就建设一个什么样的中亚提出“四点主张”，就如何建设中国一中亚命运共同体提出“四个坚持”，并就怎样发展中国同中亚国家合作提出“八点建议”。这是新时代以来，中国最高领导人首次完整、集中、系统向国际社会阐述对中亚外交政策，得到了中亚各国元首的高度赞同和热烈响应，也为构建更加紧密的中国一中亚命运共同体提供了根本遵循和行动指南。构建更加紧密的中国一中亚命运共同体是本届峰会最重要的政治成果，向世界昭示了中国和中亚各国续写千年友谊、开辟崭新未来的坚定决心。
+
+# 构建人类命运共同体
+
+国务院新闻办公室2023年9月26日发布的《携手构建人类命运共同体：中国的倡议与行动》白皮书指出，构建人类命运共同体为改革和完善国际治理体系提出了中国方案。构建人类命运共同体，并不是推倒重来，也不是另起炉灶，而是推进国际关系民主化，推动全球治理朝着更加公正合理的方向发展。这一重要理念，汇聚了各国人民求和平、谋发展、盼稳定的最大公约数，画出了不同文化背景和发展程度国家之间的最大同心圆，超越了零和博弈、强权政治、冷战对抗的各种陈旧思维，成为新时代中国特色大国外交的总目标，成为引领时代潮流和人类前进方向的鲜明旗帜。
