--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -30,7 +30,7 @@
 
 1851年至1868年：:star:捻军起义，爆发于黄河、淮河流域，由捻党转化而来的农民起义军的反清战争。
 
-1853年。:star: 太平天国攻克武昌、江宁，定都天京，颁布《天朝田亩制度》；:star: 日本黑船事件。
+1853年。:star: 太平天国攻克武昌、江宁，定都天京，颁布**《天朝田亩制度》**；:star: 日本黑船事件。
 
 1853年~1856年：:star:克里米亚战争（俄国对抗奥斯曼、英法）
 
@@ -40,13 +40,13 @@
 
 1857年。:star: 6月石达开率部出走。
 
-1858年。:star: 5月中俄《瑷珲条约》。:star: 6月中英《天津条约》。
+1858年。:star: 5月中俄**《瑷珲条约》**。:star: 6月中英**《天津条约》**。
 
 1859年。:star: 太平天国**《资政新篇》**（中国近代史上第一个比较系统的发展资本主义的方案），主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。
 
 1860年至1890年：:star:**洋务运动**兴起（19世纪60年代初至19世纪90年代，自强求富），洋务运动是在19世纪60年代初第二次鸦片战争结束后，在清政府镇压太平天国起义与捻军起义的过程中兴起的。
 
-1860年。:star:英法联军攻入北京，劫掠并火烧圆明园。:star: 10月第二次鸦片战争结束，中英法俄《北京条约》。:star: 上海江南制造总局（曾国藩支持、李鸿章筹办）。:star: 金陵机器局（李鸿章）。
+1860年。:star:英法联军攻入北京，劫掠并火烧圆明园。:star: 10月第二次鸦片战争结束，中英法俄**《北京条约》**。:star: 上海江南制造总局（曾国藩支持、李鸿章筹办）。:star: 金陵机器局（李鸿章）。
 
 1861年4月12日 至 1865年4月9日，:star:**美国南北战争**。
 
@@ -80,9 +80,9 @@
 
 1889年。:star:7月14日，在巴黎召开了国际工人代表大会，通过了《国际劳工立法》草案和关于《庆祝“五一节”的决议》，这次会议被公认为是**第二国际**的成立大会，即“社会主义国际”是一个工人运动的世界组织。
 
-1894年。:star:**甲午战争**。:star:孙中山创立**兴中会**喊出“振兴中华”
+1894年。:star:**甲午战争**。:star:孙中山创立**兴中会**喊出“振兴中华”。:star:**《盛世危言》**郑观应，大力发展民族工商业，同西方国家进行“商战”，设立议院、实行“君民共主”制度等主张。
 
-1895年。:star:4月甲午战败（洋务运动失败）《马关条约》。:star:公车上书。:star:沙俄联合法、德干涉日本割占中国辽东半岛。:star:严复《救亡决论》。
+1895年。:star:4月甲午战败（洋务运动失败）**《马关条约》**。:star:公车上书。:star:沙俄联合法、德干涉日本割占中国辽东半岛。:star:严复**《救亡决论》**，救亡图存。
 
 1897年。:star:11月，山东发生“曹州教案”，两名德国传教士被冲入教堂的村民打死。德国立即作出了反应，乘机出兵占据了胶州湾和胶澳（今青岛）。德皇甚至对其舰队妄言“如中国阻挠我事，以老拳挥之”。接下来的一个月，俄军侵占辽阳南方的旅顺，英国和法国分别派兵侵占威海和广州湾（今广东湛江）。:star:严复翻译并发表**《天演论》**，“物竞天择，适者生存”。
 
@@ -124,7 +124,7 @@
 
 1914年。:star:袁世凯撕毁《临时约法》。:star:孙中山在日本创建**中华革命党**。:star:7月28日，**一战爆发**。:star:一战爆发后，第二国际的大多数社会民主党在右派和中派的控制下，背叛了无产阶级革命事业，站在本国资产阶级政府一边，支持帝国主义战争，使第二国际分裂成为互相厮杀的社会沙文主义的政党，**第二国际破产**。
 
-1915年。:star:袁世凯基本接受日本”二十一条“要求。:star:蔡锷等在云南组织护国军，开始护国运动。:star:9月陈独秀在上海创办**《青年杂志》（后改名《新青年》）**，新文化运动兴起，提倡民主和科学，大力提倡新道德、反对旧道德。
+1915年。:star:袁世凯基本接受日本”二十一条“要求。:star:蔡锷等在云南组织护国军，开始**护国运动**。:star:9月陈独秀在上海创办**《青年杂志》（后改名《新青年》）**，新文化运动兴起，提倡民主和科学，大力提倡新道德、反对旧道德。
 
 **1915年-1923年：:star:新文化运动**
 
@@ -176,7 +176,7 @@
 1929年。:star:2月蒋桂战争、蒋冯战争。:star:4月，毛泽东主持制定中共第二个土地法**《兴国土地法》**（将“没收一切土地”变为“没收一切公用土地及地主阶级的土地”，这是一个原则性的修正，保护了中农的利益使之不受侵犯；但是它仍然规定农民对分到的土地只有使用权，没有所有权）。:star:10月，由美国开始的经济危机席卷整个资本主义世界。:star:12月，红四军党的第九次代表大会（**古田会议**，确立了思想建党、政治建军的原则）。:star:12月，毛泽东**《关于纠正党内的错误思想》**，针对党和红军中存在的种种非无产阶级思想及其危害，提出了思想建党、政治建军的原则，强调党员不但要在组织上入党，而且要在思想上入党，要经常注意用无产阶级思想改造和克服各种非无产阶
 级思想。定型了党对军队绝对领导的根本原则和制度。
 
-1930年。:star:1月毛泽东**《星星之火，可以燎原》**，进一步发展了”工农武装割据“的思想，基本形成了农村包围城市、武装夺取政权的理论，红军、游击队和红色区域的建立和发展是半殖民地中国在无产阶级领导之下的农民斗争的最高形式和半殖民地农民斗争发展的必然结果，并且无疑义的是促进全国革命高潮的最重要因素。:star:5月毛泽东**《反对本本主义》**,毛泽东思想的初步形成。理论与实际相结合。独立自主思想的最初的明确表述，坚持独立自主原则是毛泽东针对党存在的”左“倾教条主义("本本主义")倾向错误提出的。第一次提出”没有调查，就没有发言权“。第一次提出”中国革命斗争的胜利要靠中国同志了解中国情况“。基本形成了包含毛泽东思想的活的灵魂的实事求是、群众路线、独立自主基本思想，基本形成了明确的马克思主义的思想路线。:star:5月至10月，中原大战。:star:10月，蒋介石开始**”围剿“中共**。
+1930年。:star:1月毛泽东**《星星之火，可以燎原》**，进一步发展了”工农武装割据“的思想，基本形成了农村包围城市、武装夺取政权的理论，红军、游击队和红色区域的建立和发展是半殖民地中国在无产阶级领导之下的农民斗争的最高形式和半殖民地农民斗争发展的必然结果，并且无疑义的是促进全国革命高潮的最重要因素。:star:5月毛泽东**《反对本本主义》**,毛泽东思想的初步形成。理论与实际相结合。独立自主思想的最初的明确表述，坚持独立自主原则是毛泽东针对党存在的”左“倾教条主义("本本主义")倾向错误提出的。第一次提出”没有调查，就没有发言权“。第一次提出”中国革命斗争的胜利要靠中国同志了解中国情况“。基本形成了包含**毛泽东思想的活的灵魂**的实事求是、群众路线、独立自主基本思想，基本形成了明确的马克思主义的思想路线。:star:5月至10月，中原大战。:star:10月，蒋介石开始**”围剿“中共**。
 
 1930年10月~1931年7月，:star:连续粉碎三次”围剿“。
 
@@ -211,11 +211,11 @@
 
 1942年。:star:1月《联合国家宣言》。:star:1月，第三次长沙会战（给日军有力打击）。:star:2月，中国**远征军**进入缅甸抗日。:star:2月**《整顿党的作风》《反对党八股》**（提出反对主观主义以整顿学风、反对宗派主义以整顿党风、反对党八股以整顿文风；整风运动在全党普遍展开）。5月，毛泽东**《在延安文艺座谈会上的讲话》**，第一次提出“为什么人的问题，是一个根本的问题原则的问题”，即“基本上是一个为群众的问题和个如何为群众的问题”。:star:7月至次年2月，**斯大林格勒战役**（二战转折点）。:star:**中途岛海战**，太平洋战争转折点。
 
-1943年。:star:5月15日，第三国际执委会主席团拟定关于解散第三国际的提议书，提交各国支部讨论，得到各国共产党的同意。:star:6月10日，**第三国际正式宣告解散**。:star:11月《开罗宣言》（协调对日作战的共同军事问题和战后处置日本等，从法律上明确了日本侵占台湾的非法性，确认了台湾是中国领土）。:star:11月德黑兰会议（开辟西欧第二战场，建立维护和平的国际组织，巴尔干、法国、远东、芬兰以及波兰疆界等问题，《德黑兰宣言》）。
+1943年。:star:5月15日，第三国际执委会主席团拟定关于解散第三国际的提议书，提交各国支部讨论，得到各国共产党的同意。:star:6月10日，**第三国际正式宣告解散**。:star:11月德黑兰会议（开辟西欧第二战场，建立维护和平的国际组织，巴尔干、法国、远东、芬兰以及波兰疆界等问题，《德黑兰宣言》）。:star:12月《开罗宣言》，协调对日作战的共同军事问题和战后处置日本等，从法律上明确了日本侵占台湾的非法性，确认了台湾是中国领土，东北、台湾、澎湖列岛等归还中国。
 
 1944年。:star:5月11日，豫湘桂战役（国民党军队大溃退）。:star:5月21日—翌年4月20日，中共扩大的**六届七中全会**在延安召开。全会通过毛泽东为中央委员会主席的提议，原则通过**《关于若干历史问题的决议》**，肯定了确立毛泽东在全党的领导地位的重大意义，使全党尤其是党的高级干部对中国民主革命基本问题的认识达到在马克思列宁主义基础上的一致。至此，**整风运动胜利结束**。整风运动是一次深刻的马克思主义思想教育运动，收到巨大成效。通过整风运动，实现了在以毛泽东同志为核心的党中央领导下全党新的团结和统一，为抗日战争的胜利和新民主主义革命在全国的胜利，奠定了重要的思想政治基础。延安整风运动所积累的经验对党的建设具有重大而深远的意义。:star:6月**诺曼底登陆**。:star:7月联合国国际货币金融会议（布雷顿森林货币体系，二战后以美元为中心的国际货币体系，外汇自由化、资本自由化和贸易自由化为主要内容的多边经济制度，构成资本主义集团的核心内容）。:star:9月，提出联合政府主张。:star:本年 中国共产党领导敌后军民在华北、华中、华南地区发起局部反攻，歼灭日、伪军近20万人，收复大片国土，解放人口1700多万。
 
-1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议《联合国宪章》，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月《波茨坦公告》。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
+1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议《联合国宪章》，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
 
 ## **1945~1949：:star:解放战争时期**
 
@@ -228,9 +228,9 @@
 1947年。:star:2月，国民党政府先后通知共产党驻南京、上海、重庆等地担任谈判联络工作的代表全部撤回。3月上旬，共产党驻上述三地人员分别撤回延安。国共关系完全破裂。:star:5月1日 ，内蒙古自治政府正式成立，这是中国共产党领导的第一个省级少数民族自治政府。:star:5月20日，五二〇运动（学生“反饥饿、反迫害、反内战”，遭到了国民党军警的残暴镇压）。:star:6月，千里跃进大别山。:star:7月，**《中国土地法大纲》**（解放区广大农村掀起土改高潮，“废除封建性及半封建性剥削的土地制度，实行耕者有其田的土地制度”，“乡村中一切地主的土地及公地，由乡村农会接收”，分配给无地或少地的农民）。:star:7月，中共作出决定：不等完全粉碎敌人的战略进攻，立刻转入全国性的反攻，以主力打到外线区，将战争引向国民党统治区。战略进攻的序幕由此揭开，**战略进攻阶段**开始。:star:8月下旬，晋冀鲁豫野战军一部渡过黄河，挺进豫西。:star:9月，华东野战军主力越过陇海铁路南下，进入豫皖苏平原。:star:10月，国民党宣布民盟为“非法团体”。:star:10月10日，中国人民解放军总部发表宣言提出“打倒蒋介石，解放全中国”的口号。:star:12月，毛泽东**《目前形势与我们的任务》**，第一次提出新民主主义的三大经济纲领：①没收封建阶级的土地归农民所有；②没收蒋介石、宋子文、孔祥熙、陈立夫为首的垄断资本归新民主主义国家所有；③保护民族工商业。提出土改中必须注意的两个原则：①必须满足贫农雇农的要求；②必须坚决地团结中农，不要损害
 中农的利益。
 
-1948年。:star:4月30日，中共提出**“五一口号”**，提出”各民主党派、各人民团体、各社会贤达迅速召开政治协商会议，讨论并实现召集人民代表大会，成立民主联合政府“，揭开了中国共产党同各党各派、各团体、各族各界人士协商建国的序幕，奠定了中国共产党领导的多党合作和政治协商制度的基础。:star:4月，毛泽东**《在晋绥干部会议上的讲话》**，**第一次完整地提出新民主主义革命的总路线**：无产阶级领导的，人民大众的，反对帝国主义、封建主义和官僚资本主义的革命。第一次把官僚资本主义、官僚资产阶级列为中国革命的对象和敌人，第一次有了“三大对象、三座大山、三大敌人”的说法。提出了土地改革的总路线：依靠贫雇农，团结中农，有步骤地、有分别地消灭封建剥削制度，发展农业生产。:star:6月 《人民日报》创刊。:star:9月16日—24日 华东野战军进行济南战役，解放济南。:star:秋，人民解放战争进入夺取全国胜利的决定性的阶段，进入**战略决战阶段**。:star:9月12日 至 11月2日辽沈战役，东北全境解放，从此，解放军不但在质量上占有优势，而且在数量上也取得优势，中国人民革命的军事形势达到一个新的转折点。:star:11月6日 至 次年1月10日淮海战役，长江中下游以北广大地区解放。:star:1948年11月29日 至 1949年1月31日平津战役，华北全境基本解放，其间，1949年1月31日北平和平解放。:star:12月1日，中国人民银行成立并发行人民币。:star:12月，毛泽东**《将革命进行到底》**，**第一次公开使用人民民主专政的概念**。
+1948年。:star:4月30日，中共提出**“五一口号”**，提出”各民主党派、各人民团体、各社会贤达迅速召开政治协商会议，讨论并实现召集人民代表大会，成立民主联合政府“，揭开了中国共产党同各党各派、各团体、各族各界人士协商建国的序幕，奠定了中国共产党领导的多党合作和政治协商制度的基础。:star:4月，毛泽东**《在晋绥干部会议上的讲话》**，**第一次完整地提出新民主主义革命的总路线**：无产阶级领导的，人民大众的，反对帝国主义、封建主义和官僚资本主义的革命。第一次把官僚资本主义、官僚资产阶级列为中国革命的对象和敌人，第一次有了“三大对象、三座大山、三大敌人”的说法。**提出了土地改革的总路线**：依靠贫雇农，团结中农，有步骤地、有分别地消灭封建剥削制度，发展农业生产。:star:6月 《人民日报》创刊。:star:9月16日—24日 华东野战军进行济南战役，解放济南。:star:秋，人民解放战争进入夺取全国胜利的决定性的阶段，进入**战略决战阶段**。:star:9月12日 至 11月2日辽沈战役，东北全境解放，从此，解放军不但在质量上占有优势，而且在数量上也取得优势，中国人民革命的军事形势达到一个新的转折点。:star:11月6日 至 次年1月10日淮海战役，长江中下游以北广大地区解放。:star:1948年11月29日 至 1949年1月31日平津战役，华北全境基本解放，其间，1949年1月31日北平和平解放。:star:12月1日，中国人民银行成立并发行人民币。:star:12月，毛泽东**《将革命进行到底》**，**第一次公开使用人民民主专政的概念**。
 
-1949年。:star:1月22日，李济深、沈钧等民主党派的领导人和著名的无党派人士55人联合发表**《对时局的意见》**，一致认定中共提出的关于召开政治协商会议、成立联合政府的主张“符合于全国人民大众的要求”，恳切表示“愿在中共领导下，献其绵薄，共策进行，以期中国人民民主革命指迅速成功，独立、自由、和平、幸福的新中国之早日实现”。这个政治声明表明，中国各民主党派和无党派民主人士公开愿意接受中国共产党的领导，决心走人民革命的道路，拥护建立人民民主的新中国。:star:1月31日至2月7日 ，毛泽东提出**“打扫干净屋子再请客”的方针**，在此前后还提出“另起炉灶”和“一边倒”的方针，由此奠定了新中国外交政策的基础。 :star:3月，**中共七届二中全会**，西柏坡，规定了党在全国胜利后在政治经济外交方面应采取的基本政策，指出中国由农业国转变为工业国、由新民主主义社会转变为社会主义社会的总任务和主要途径；**第一次明确提出执政党建设问题的会议**；制定和实现了“公私兼顾、劳资两利、城乡互补、内外交流”的新民主主义经济建设的方针政策，简称为“四面八方”政策，。 毛泽东**《在中国共产党第七届中央委员会第二次全体会议上的报告》**， 说明在全国胜利局面下，**党的工作中心必须由乡村转到城市**；提醒全党务必保持谦虚、谨慎、不骄、不躁的作风， 务必继续保持艰苦奋斗的作风，警惕资产阶级的”糖衣炮弹“（ 两个”务必“ ）。毛泽东**《党委会的工作方法》**，提出十二条工作方法，强调党委书记要善于当班长，要把问题摆到桌面上来，学会“弹钢琴”；党委要抓紧中心工作，又要围绕中心工作而同时开展其他方面的工作。:star:4月1日，党提出**《国内和平协定》**并宣布4月20日为最后签字时间。:star:4月4日，北大西洋公约组织。:star:4月20日国民党政府拒绝接受《国内和平协定》，解放军遂发起渡江战役，国民党政府“划江而治”的图谋破产。:star:4月21日，**《向全国进军的命令》**，20日夜至21日发起渡江战役。百万雄师强渡长江。:star:4月23日，南京解放，宣告延续了22年之久的**国民党反动派统治覆灭**。:star:5月27日解放上海。:star:6月30日，毛泽东**《论人民民主专政》**，提出主要经验、主要纲领就是人民民主专政，指出人民民主专政需要工人阶级的领导。完整地提出了人民民主专政理论，科学地阐明了新中国国家政权的性质及各阶级在国家中的地位与相互关系，进一步完善了新民主主义的政治纲领。总结中国民主革命胜利基本经验：“总结我们的经验，集中到一点，就是工人阶级（经过共产党）领导的以工农联盟为基础的人民民主专政”。指出“我们现在的方针是节制资本主义，而不是消灭资本主义”。提出新中国在外交上必须实行一边倒，即倒向社会主义一边。:star:8月14日—9月16日，毛泽东连续为新华社撰写《丢掉幻想，准备斗争》等五篇评论，揭露美国对华政策的帝国主义本质，批评国内一部分人对帝国主义不切实际的幻想，并对中国革命的发生和胜利的原因作理论上的说明。:star:9月21日，**中国人民政治协商会议第一届全体会议**，标志着中国共产党领导的多党合作和政治协商制度的建立，《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》（**共同纲领**，宪法前身，“四面八方”政策组为新民主主义经济工作的政策）。:star:10月1日**中华人民共和国成立**，实现民族独立、人民解放，彻底结束了半殖民地半封建社会的历史，彻底结束了极少数剥削者统治广大劳动人民的历史，彻底结束了旧中国一盘散沙的局面，彻底废除了列强强加给中国的不平等条约和帝国主义在中国的一切特权。:star:10月2日，苏联政府决定同新中国建立外交关系。:star:10月9日 中国人民政治协商会议第一届全国委员会第一次会议举行。会议选举毛泽东为政协第一届全国委员会主席。:star:10月21日 中央人民政府政务院成立。
+1949年。:star:1月22日，李济深、沈钧等民主党派的领导人和著名的无党派人士55人联合发表**《对时局的意见》**，一致认定中共提出的关于召开政治协商会议、成立联合政府的主张“符合于全国人民大众的要求”，恳切表示“愿在中共领导下，献其绵薄，共策进行，以期中国人民民主革命指迅速成功，独立、自由、和平、幸福的新中国之早日实现”。这个政治声明表明，中国各民主党派和无党派民主人士公开愿意接受中国共产党的领导，决心走人民革命的道路，拥护建立人民民主的新中国。:star:1月31日至2月7日 ，毛泽东提出**“打扫干净屋子再请客”的方针**，在此前后还提出“另起炉灶”和“一边倒”的方针，由此奠定了新中国外交政策的基础。 :star:3月，**中共七届二中全会**，西柏坡，规定了**党在全国胜利后在政治经济外交方面应采取的基本政策**，指出中国由农业国转变为工业国、由新民主主义社会转变为社会主义社会的总任务和主要途径；**第一次明确提出执政党建设问题的会议**；制定和实现了“公私兼顾、劳资两利、城乡互补、内外交流”的新民主主义经济建设的方针政策，简称为“四面八方”政策，。 毛泽东**《在中国共产党第七届中央委员会第二次全体会议上的报告》**， 说明在全国胜利局面下，**党的工作中心必须由乡村转到城市**；提醒全党务必保持谦虚、谨慎、不骄、不躁的作风， 务必继续保持艰苦奋斗的作风，警惕资产阶级的”糖衣炮弹“（ **两个”务必“** ）。毛泽东**《党委会的工作方法》**，提出十二条工作方法，强调党委书记要善于当班长，要把问题摆到桌面上来，学会“弹钢琴”；党委要抓紧中心工作，又要围绕中心工作而同时开展其他方面的工作。:star:4月1日，党提出**《国内和平协定》**并宣布4月20日为最后签字时间。:star:4月4日，北大西洋公约组织。:star:4月20日国民党政府拒绝接受《国内和平协定》，解放军遂发起渡江战役，国民党政府“划江而治”的图谋破产。:star:4月21日，**《向全国进军的命令》**，20日夜至21日发起渡江战役。百万雄师强渡长江。:star:4月23日，南京解放，宣告延续了22年之久的**国民党反动派统治覆灭**。:star:5月27日解放上海。:star:6月30日，毛泽东**《论人民民主专政》**，提出主要经验、主要纲领就是人民民主专政，指出人民民主专政需要工人阶级的领导。完整地提出了人民民主专政理论，科学地阐明了新中国国家政权的性质及各阶级在国家中的地位与相互关系，进一步完善了新民主主义的政治纲领。总结中国民主革命胜利基本经验：“总结我们的经验，集中到一点，就是工人阶级（经过共产党）领导的以工农联盟为基础的人民民主专政”。指出“我们现在的方针是节制资本主义，而不是消灭资本主义”。提出新中国在外交上必须实行一边倒，即倒向社会主义一边。:star:8月14日—9月16日，毛泽东连续为新华社撰写《丢掉幻想，准备斗争》等五篇评论，揭露美国对华政策的帝国主义本质，批评国内一部分人对帝国主义不切实际的幻想，并对中国革命的发生和胜利的原因作理论上的说明。:star:9月21日，**中国人民政治协商会议第一届全体会议**，标志着中国共产党领导的多党合作和政治协商制度的建立，《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》（**共同纲领**，宪法前身，“四面八方”政策组为新民主主义经济工作的政策）。:star:10月1日**中华人民共和国成立**，实现民族独立、人民解放，彻底结束了半殖民地半封建社会的历史，彻底结束了极少数剥削者统治广大劳动人民的历史，彻底结束了旧中国一盘散沙的局面，彻底废除了列强强加给中国的不平等条约和帝国主义在中国的一切特权。:star:10月2日，苏联政府决定同新中国建立外交关系。:star:10月9日 中国人民政治协商会议第一届全国委员会第一次会议举行。会议选举毛泽东为政协第一届全国委员会主席。:star:10月21日 中央人民政府政务院成立。
 
 # 1949年10月到1978年12月：:star:社会主义革命和建设时期
 
@@ -266,7 +266,7 @@
 
 **1956年底至今：社会主义初级阶段**
 
-1957年。:star:2月**《关于正确处理人民内部矛盾的问题》**，解决敌我矛盾用专政的方法，分清敌我；解决人民内部矛盾采用民主的方法，分清是非，思想政治领域“团结-批判-团结”；物质利益、分配方面，实现统筹兼顾、适当安排的方针；对于科学文化领域里的矛盾，实行“百花齐放、百家争鸣”；共产党和民主党派之间的矛盾，坚持社会主义道路和党领导的前提下的“长期共存、互相监督”。明确提出了中国工业化的道路。:star:4月《关于整风运动的指示》（整风运动，以正确处理人民内部矛盾为主题，以反对官僚主义、宗派主义和主观主义为主要内容的整风运动全面展开；在整风过程中，极少数右派分子乘机向党和新生的社会主义制度发动进攻）。:star:夏，《一九五七年夏季的形势》。:star:6月，整风运动的重点开始由党内整风转向反右派斗争。:star:本年 “一五”计划超额完成，“一五”计划取得巨大成就，为中国社会主义工业化奠定了初步基础，为社会主义建设积累了宝贵经验。
+1957年。:star:2月**《关于正确处理人民内部矛盾的问题》**，解决敌我矛盾用专政的方法，分清敌我；解决人民内部矛盾采用民主的方法，分清是非，思想政治领域“团结-批判-团结”；物质利益、分配方面，实现统筹兼顾、适当安排的方针；对于科学文化领域里的矛盾，实行“百花齐放、百家争鸣”；共产党和民主党派之间的矛盾，坚持社会主义道路和党领导的前提下的“长期共存、互相监督”。明确提出了中国工业化的道路。:star:4月**《关于整风运动的指示》**（整风运动，以正确处理人民内部矛盾为主题，以反对官僚主义、宗派主义和主观主义为主要内容的整风运动全面展开；在整风过程中，极少数右派分子乘机向党和新生的社会主义制度发动进攻）。:star:夏，**《一九五七年夏季的形势》**。:star:6月，整风运动的重点开始由党内整风转向反右派斗争。:star:本年 “一五”计划超额完成，“一五”计划取得巨大成就，为中国社会主义工业化奠定了初步基础，为社会主义建设积累了宝贵经验。
 
 1958年。:star:3月5日，广西僮族自治区成立（1965年10月12日改称广西壮族自治区）。:star:5月5日—23日，中共八大二次会议召开，会议正式通过“鼓足干劲、力争上游、多快好省地建设社会主义”总路线，会后，**“大跃进”运动**在全国展开（”大跃进“至1960年）。:star:夏季，整风运动和反右派斗争完全结束，对右派分子的进攻进行反击是正确和必要的，但反右派斗争被严重扩大化。:star:8月17日—30日 ，中央政治局扩大会议会后，全国很快掀起**大炼钢铁**和**人民公社化运动**的高潮，以高指标、瞎指挥、浮夸风和“共产风”为主要标志的“左”倾错误严重泛滥开来。:star:10月25日，宁夏回族自治区成立。:star:11月第一次**郑州会议**作出初步纠正“左”倾错误的努力、党中央领导整顿人民公社（到1959年7月，中共中央相继召开中共八届六中全会、第二次郑州会议、中共八届七中全会等一系列会议，初步纠正已经察觉到的“大跃进”和人民公社化运动中出现的“左”的错误）。:star:本年，苏联提出要在中国领土和领海上建立中苏共有共管的长波电台和共同舰队，遭到坚决拒绝，**中苏关系开始恶化**。
 
@@ -274,7 +274,7 @@
 
 1959年。:star:3月10日，西藏上层反动集团撕毁关于和平解放西藏办法的“十七条协议”，发动武装叛乱。:star:3月20日，人民解放军驻藏部队奉命进行平叛作战；:star:3月22日，中共中央发出在平叛中实行民主改革的指示。:star:6月苏联政府撕毁两国关于国防新技术协定。:star:7月2日—8月1日 中央政治局扩大会议在江西庐山召开，原定议题是总结“大跃进”以来的经验教训，继续纠正“左”的错误，但会议后期错误地发动了对彭德怀等人的批判，纠正“左”倾错误的努力被庐山会议“反右倾”斗争中断。:star:8月2日至16日，中共八届八中全会在庐山召开。会后，在全党错误地开展了“反右倾”斗争。:star:8月，中印第一次边境冲突，苏方不问是非曲直发表偏袒印度的声明，中苏关系进一步恶化。
 
-1960年。:star:1月28日 中缅两国签订《中华人民共和国政府和缅甸联邦政府关于两国边界问题的协定》、《中华人民共和国和缅甸联邦之间的友好和互不侵犯条约》。:star:10月1日，双方签订《中华人民共和国和缅甸联邦边界条约》（这是中国与邻国成功解决边界问题的第一例，为以后解决类似问题树立了良好范例；此后，中国又陆续与尼泊尔、蒙古、巴基斯坦和阿富汗等国签订了边界协定或条约）。:star:11月3日 ，中共中央发出《关于农村人民公社当前政策问题的紧急指示信》，要求坚决纠正农村人民公社的“共产风”。:star:石油输出国组织（“欧佩克”）建立。:star:年底，西藏民主改革基本完成，彻底摧毁了政教合一的封建农奴制度，实现百万农奴和奴隶翻身解放。
+1960年。:star:1月28日 中缅两国签订《中华人民共和国政府和缅甸联邦政府关于两国边界问题的协定》、《中华人民共和国和缅甸联邦之间的友好和互不侵犯条约》。:star:3月， “两参一改三结合”（要实行民主管理，实行干部参加劳动，工人参加管理，改革不合理的规章制度，工人群众、领导干部和技术人员三结合即其中之一。:star:10月1日，双方签订《中华人民共和国和缅甸联邦边界条约》（这是中国与邻国成功解决边界问题的第一例，为以后解决类似问题树立了良好范例；此后，中国又陆续与尼泊尔、蒙古、巴基斯坦和阿富汗等国签订了边界协定或条约）。:star:11月3日 ，中共中央发出《关于农村人民公社当前政策问题的紧急指示信》，要求坚决纠正农村人民公社的“共产风”。:star:石油输出国组织（“欧佩克”）建立。:star:年底，西藏民主改革基本完成，彻底摧毁了政教合一的封建农奴制度，实现百万农奴和奴隶翻身解放。
 
 1961至1975年：:star:美国对越南发动的侵略战争。
 
@@ -354,9 +354,7 @@
 
 1991年。:star:7月1日，华沙条约组织正式解散。:star:11月，十三届八中全会《中共中央关于进一步加强农业和农村工作的决定》提出把以家庭联产承包为主的责任制、统分结合的双层经营体制作为我国乡村集体经济组织的一项基本制度长期稳定下来，并不断充实完善。:star:12月8日独立国家联合体（独联体）。:star:12月26日**苏联解体**。
 
-1992年。:star:1月至2月21日，**南方谈话**（把改革开放和现代化建设推向新阶段，坚持党的十一届三中全会以来的路线、方针、政策，关键是坚持“一个中心、两个基本点”，基本路线要管一百年；判断姓“社”姓“资”的标准，应该主要看是否有利于发展社会主义社会的生产力，是否有利于增强社会主义国家的综合国力，是否有利于提高人民的生活水平；要抓住时机，发展自己，发展才是硬道理。特别强调，计划多一点还是市场多一点，不是社会主义与资本主义的本质区别。社会主义的本质，是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕。这次谈话是把改革开放和现代化建设推进到新阶段的又一个解放思想、实事求是的宣言书）。:star:10月中共第十四次全国代表大会（**党十四大**，总结党的十一届三中全会以来14年的实践经验，决定抓住机遇，加快发展；确定我国经济体制改革的目标是建立社会主义市场经济体制；提出用邓小平同志建设有中国特色社会主义的理论武装全党，将邓小平同志建设有中国特色社会主义的理论和党在社会主义初级阶段的基本路线写入党章）。:star:11月，**九二共识**（海峡两岸关系协会与台湾海峡交流基金会，就解决两岸事务性商谈中如何表述坚持一个中国原则的问题，达成“海峡两岸同属一个中国，共同努力谋求国家统一”的共识）。
-
-1993年。:star:3月15日—31日 ，八届全国人大一次会议举行，肯定中国正处于社会主义初级阶段，国家实行**社会主义市场经济**；明确中国共产党领导的多党合作和政治协商制度将长期存在和发展；通过《中华人民共和国澳门特别行政区基本法》、《关于〈中华人民共和国澳门特别行政区基本法〉的决定》、《关于设立中华人民共和国澳门特别行政区的决定》；会议批准国务院机构改革方案，首次明确提出机构改革的重点是转变政府职能。:star:11月7日，江泽民指出，要继续巩固和发展社会主义的民族关系，坚持和完善民族区域自治制度，加快民族地区的经济发展和社会进步；要全面、正确地贯彻执行党的宗教政策，依法加强对宗教事务的管理，积极引导宗教与社会主义社会相适应。:star:11月11日—14日，中共十四届三中全会召开，全会通过**《关于建立社会主义市场经济体制若干问题的决定》**，勾画了**社会主义市场经济体制的基本框架**，指出，社会主义市场经济体制是同社会主义基本制度结合在一起的，建立社会主义市场经济体制，就是要使市场在国家宏观调控下对资源配置起基础性作用；要进一步转换国有企业经营机制，建立适应市场经济要求，产权清晰、权责明确、政企分开、管理科学的现代企业制度。
+1992年。:star:1月至2月21日，**南方谈话**（把改革开放和现代化建设推向新阶段，坚持党的十一届三中全会以来的路线、方针、政策，关键是坚持“一个中心、两个基本点”，基本路线要管一百年；判断姓“社”姓“资”的标准，应该主要看是否有利于发展社会主义社会的生产力，是否有利于增强社会主义国家的综合国力，是否有利于提高人民的生活水平；要抓住时机，发展自己，**发展才是硬道理**。特别强调，计划多一点还是市场多一点，不是社会主义与资本主义的本质区别；**计划和市场都是经济手段**的思想。**社会主义本质思想**，是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕。这次谈话是把改革开放和现代化建设推进到新阶段的又一个解放思想、实事求是的宣言书）。:star:10月中共第十四次全国代表大会（**党十四大**，总结党的十一届三中全会以来14年的实践经验，决定抓住机遇，加快发展；确定我国经济体制改革的目标是建立社会主义市场经济体制；提出用邓小平同志建设有中国特色社会主义的理论武装全党，将邓小平同志建设有中国特色社会主义的理论和党在社会主义初级阶段的基本路线写入党章）。:star:11月，**九二共识**（海峡两岸关系协会与台湾海峡交流基金会，就解决两岸事务性商谈中如何表述坚持一个中国原则的问题，达成“海峡两岸同属一个中国，共同努力谋求国家统一”的共识）。
 
 1994年。:star:1月11日 ，国务院作出《关于进一步深化对外贸易体制改革的决定》，指出，我国外贸体制改革的目标是：统一政策、放开经营、平等竞争、自负盈亏、工贸结合、推行代理制，建立适应国际经济通行规则的运行机制。:star:3月19日，全国政协八届二次会议审议通过《中国人民政治协商会议章程》（修正案），把政治协商、民主监督、参政议政并列为人民政协的主要职能。:star:12月第一次车臣战争。
 
@@ -364,7 +362,7 @@
 
 1996年。:star:8月31日第一次车臣战争停火，车臣获得非正式的独立地位。:star:10月7日—10日，中共十四届六中全会召开。全会通过《关于加强社会主义精神文明建设若干重要问题的决议》，指出，社会主义社会是全面发展、全面进步的社会，社会主义现代化事业是物质文明和精神文明协调发展的事业。
 
-1997年。:star:2月19日邓小平逝世。:star:7月1日**香港回归**。:star:7月，亚洲金融危机爆发。:star:9月中共第十五次全国代表大会（**党十五大**，**正式提出“邓小平理论”这一概念，并将其确定为党的指导思想**，江泽民提出党在社会主义初级阶段的基本纲领：建设有中国特色社会主义的经济、政治、文化的基本目标和基本政策；着重阐述邓小平理论的历史地位和指导意义；明确公有制为主体、多种所有制经济共同发展是我国社会主义初级阶段的一项基本经济制度；强调依法治国，建设社会主义法治国家；明确我国改革开放和现代化建设跨世纪发展的宏伟目标。把邓小平理论同马克思列宁主义、毛泽东思想一道确立为党的指导思想并载入党章）。
+1997年。:star:2月19日邓小平逝世。:star:7月1日**香港回归**。:star:7月，亚洲金融危机爆发。:star:9月中共第十五次全国代表大会（**党十五大**，**正式提出“邓小平理论”这一概念，并将其确定为党的指导思想**，江泽民提出党在社会主义初级阶段的基本纲领：建设有中国特色社会主义的经济、政治、文化的基本目标和基本政策；着重阐述邓小平理论的历史地位和指导意义；**明确公有制为主体、多种所有制经济共同发展是我国社会主义初级阶段的一项基本经济制度**；强调**依法治国**，建设社会主义法治国家；明确我国改革开放和现代化建设跨世纪发展的宏伟目标。把邓小平理论同马克思列宁主义、毛泽东思想一道确立为党的指导思想并载入党章）。
 
 1999年。:star:8月第二次车臣战争。:star:12月20日**澳门回归**。
 
@@ -400,7 +398,7 @@
 
 **2012年11月:star:党的十八大标志着进入中国特色社会主义新时代**
 
-2013年。:star:1月21日—22日 十八届中央纪委二次全会召开，习近平讲话强调，要坚持“老虎”、“苍蝇”一起打，既坚决查处领导干部违纪违法案件，又切实解决发生在群众身边的不正之风和腐败问题；要加强对权力运行的制约和监督，把权力关进制度的笼子里。:star:3月中华人民共和国**第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席**，李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。:star:3月习近平莫斯科演说首次提出**人类命运共同体**理念。:star:3月，习近平指出，建设一支听党指挥、能打胜仗、作风优良的人民军队，是党在新形势下的强军目标。:star:3月17日，习近平在十二届全国人大一次会议闭幕会上讲话指出，实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福。实现中国梦，必须走中国道路、弘扬中国精神、凝聚中国力量。:star:6月，习近平明确提出信念坚定、为民服务、勤政务实、敢于担当、清正廉洁的好干部标准。:star:9月7日、10月3日 ，习近平分别在哈萨克斯坦纳扎尔巴耶夫大学、印度尼西亚国会发表演讲，先后提出共同建设“丝绸之路经济带”与“21世纪海上丝绸之路”，即**“一带一路”**倡议。:star:11月，习近平在考察湖南时提出“**精准扶贫**”的理念。:star:11月，党的十八届三中全会通过《中共中央关于全面深化改革若干重大问题的决定》，对全面深化改革进行总体擘画，确定了**全面深化改革**的总目标、战略重点、优先顺序、主攻方向、工作机制、推进方式和时间表、路线图，实现了改革理论和政策的一系列新的重大突破。党的十八届三中全会是划时代的，实现改革由局部探索、破冰突围到系统集成、全面深化的转变，开创了我国改革开放新局面。:star:11月15日，南水北调东线一期工程正式通水。:star:12月11日，中共中央办公厅印发**《关于培育和践行社会主义核心价值观的意见》**。指出，富强、民主、文明、和谐，自由、平等、公正、法治，爱国、敬业、诚信、友善，是社会主义核心价值观的基本内容。
+2013年。:star:1月21日—22日 十八届中央纪委二次全会召开，习近平讲话强调，要坚持“老虎”、“苍蝇”一起打，既坚决查处领导干部违纪违法案件，又切实解决发生在群众身边的不正之风和腐败问题；要加强对权力运行的制约和监督，把权力关进制度的笼子里。:star:3月中华人民共和国**第十二届全国人民代表大会，习近平当选为中华人民共和国主席、中华人民共和国中央军事委员会主席**，李克强同志为中华人民共和国国务院总理，会上习近平进一步强调（实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福，走中国道路，弘扬中国精神，凝聚中国力量，依靠人民实现）。:star:3月习近平莫斯科演说首次提出**人类命运共同体**理念。:star:3月，习近平指出，建设一支听党指挥、能打胜仗、作风优良的人民军队，是党在新形势下的强军目标。:star:3月17日，习近平在十二届全国人大一次会议闭幕会上讲话指出，实现中华民族伟大复兴的中国梦，就是要实现国家富强、民族振兴、人民幸福。实现中国梦，必须走中国道路、弘扬中国精神、凝聚中国力量。:star:6月，习近平明确提出信念坚定、为民服务、勤政务实、敢于担当、清正廉洁的好干部标准。:star:9月7日、10月3日 ，习近平分别在哈萨克斯坦纳扎尔巴耶夫大学、印度尼西亚国会发表演讲，先后提出共同建设“丝绸之路经济带”与“21世纪海上丝绸之路”，即**“一带一路”**倡议。:star:11月，习近平在考察湖南时提出“**精准扶贫**”的理念。:star:11月，党的**十八届三中全会**通过《中共中央关于全面深化改革若干重大问题的决定》，对全面深化改革进行总体擘画，确定了**全面深化改革**的总目标、战略重点、**优先顺序**、主攻方向、工作机制、推进方式和时间表、路线图，实现了改革理论和政策的一系列新的重大突破。党的十八届三中全会是划时代的，实现改革由局部探索、破冰突围到系统集成、全面深化的转变，**开创了我国改革开放新局面**。:star:11月15日，南水北调东线一期工程正式通水。:star:12月11日，中共中央办公厅印发**《关于培育和践行社会主义核心价值观的意见》**。指出，富强、民主、文明、和谐，自由、平等、公正、法治，爱国、敬业、诚信、友善，是社会主义核心价值观的基本内容。
 
 2014年。:star:2月习近平指出，努力把我国建设成为网络强国，强调要把握好网上舆论引导的时、度、效，使网络空间清朗起来。:star:2月，将12月13日设立为南京大屠杀死难者国家公祭日。:star:3月克里米亚独立公投其后被批准入俄。:star:4月乌克兰冲突。:star:4月15日，习近平在中央国家安全委员会第一次会议上讲话指出，要坚持**总体国家安全观**，以人民安全为宗旨，以政治安全为根本，以经济安全为基础，以军事、文化、社会安全为保障，以促进国际安全为依托，走出一条中国特色国家安全道路。:star:11月19日—21日，首届世界互联网大会在浙江乌镇召开，会议确定乌镇为世界互联网大会永久会址。:star:11月习近平提出推进**中国特色大国外交**的战略思想（要高举和平、发展、合作、共赢的旗帜，统筹国内国际两个大局，统筹发展安全两件大事，牢牢把握坚持和平发展、促进民族复兴这条主线，维护国家主权、安全、发展利益，为和平发展营造更加有利的国际环境，维护和延长我国发展的重要战略机遇期，为实现“两个一百年”奋斗目标、实现中华民族伟大复兴的中国梦提供有力保障）。:star:12月，习近平在江苏考察工作期间讲话指出，要主动把握和积极适应经济发展新常态，协调推进全面建成小康社会、全面深化改革、全面依法治国、全面从严治党。:star:12月12日，南水北调中线一期工程正式通水。
 
@@ -408,17 +406,17 @@
 
 2016年。:star:8月16日，中国成功发射世界首颗量子科学实验卫星“墨子号”。:star:9月3日，习近平出席在浙江杭州召开的二十国集团工商峰会开幕式并发表主旨演讲，提出建设创新、开放、联动、包容型世界经济，强调全球经济治理应该以平等为基础，更好反映世界经济格局新现实。:star:10月，**党的十八届六中全会**（全会明确习近平总书记党中央的核心、全党的核心地位，号召全党同志紧密团结在以习近平同志为核心的党中央周围，牢固树立政治意识、大局意识、核心意识、看齐意识，坚定不移维护党中央权威和党中央集中统一领导）。:star:10月21日，纪念红军长征胜利80周年大会召开，习近平讲话指出，每一代人有每一代人的长征路，每一代人都要走好自己的长征路，我们这一代人的长征，就是要实现“两个一百年”奋斗目标，实现中华民族伟大复兴的中国梦，要大力弘扬伟大长征精神，在新的长征路上继续奋勇前进。:star:12月7日，习近平在全国高校思想政治工作会议上讲话指出，要坚持把立德树人作为中心环节，把思想政治工作贯穿教育教学全过程，实现全程育人、全方位育人。:star:本年，**台湾民进党上台**拒不承认九二共识。:star:本年，《关于农村土地所有权承包权经营权分置办法的意见》，将农村土地产权中的土地承包经营权进一步划分为承包权和经营权，实行所有权、承包权、经营权分置并行（三权分置）。
 
-2017年。:star:1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。:star:3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。:star:5月，“一带一路”国际合作高峰论坛在北京举行，强调要坚持以和平合作、开放包容、互学互鉴、互利共赢为核心的丝路精神，将“一带一路”建成和平、繁荣、开放、创新、文明之路。:star:10月，党的第十九次全国代表大会（**党十九大**，**确立了“习近平新时代中国特色社会主义思想”的历史地位**，把习近平新时代中国特色社会主义思想确立为党必须长期坚持的指导思想并庄严的写入党章；把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；**主要矛盾**：**人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾**；提出新时代坚持和发展中国特色社会主义的基本方略，确定决胜全面建成小康社会、开启全面建设社会主义现代化国家新征程的目标；2020到21世纪中叶两个阶段；党的建设；第二轮土地承包到期后再延长30年）。:star:11月8日－10日，美国总统特朗普对中国进行国事访问，习近平同特朗普会谈，强调中方愿同美方一道，相互尊重、互利互惠，聚焦合作、管控分歧，给两国人民带来更多获得感，给地区及世界人民带来更多获得感。:star:12月22日，习近平在中央军委扩大会议上阐明新时代党的强军思想，提出人民军队新时代使命任务：为巩固中国共产党领导和我国社会主义制度提供战略支撑，为捍卫国家主权、统一、领土完整提供战略支撑，为维护我国海外利益提供战略支撑，为促进世界和平与发展提供战略支撑。
+2017年。:star:1月习近平联合国日内瓦总部演讲，系统阐述人类命运共同体的理论内涵和目标路径。:star:3月，”构建人类命运共同体“被写入联合国安理会第2344号决议。:star:5月，“一带一路”国际合作高峰论坛在北京举行，强调要坚持以和平合作、开放包容、互学互鉴、互利共赢为核心的丝路精神，将“一带一路”建成和平、繁荣、开放、创新、文明之路。:star:10月，党的第十九次全国代表大会（**党十九大**，**确立了“习近平新时代中国特色社会主义思想”的历史地位**，把习近平新时代中国特色社会主义思想确立为党必须长期坚持的指导思想并庄严的写入党章；把习近平总书记党的核心、全党的核心地位写入党章；主题：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利；作出了中国特色社会主义进入新时代、我国社会主要矛盾发生新变化的重大政治论断；**主要矛盾**：**人民日益增长的美好生活需要和不平衡不充分的发展之间的矛盾**；提出新时代坚持和发展中国特色社会主义的基本方略，确定决胜全面建成小康社会、开启全面建设社会主义现代化国家新征程的目标；2020到21世纪中叶两个阶段；党的建设；第二轮土地承包到期后再延长30年）。:star:11月8日－10日，美国总统特朗普对中国进行国事访问，习近平同特朗普会谈，强调中方愿同美方一道，相互尊重、互利互惠，聚焦合作、管控分歧，给两国人民带来更多获得感，给地区及世界人民带来更多获得感。:star:12月22日，习近平在中央军委扩大会议上阐明新时代党的强军思想，提出人民军队新时代使命任务：为巩固中国共产党领导和我国社会主义制度提供战略支撑，为捍卫国家主权、统一、领土完整提供战略支撑，为维护我国海外利益提供战略支撑，为促进世界和平与发展提供战略支撑。
 
 2018年。:star:1月11日，中共中央、国务院发出《关于开展扫黑除恶专项斗争的通知》。:star:1月11日－13日，十九届中央纪委二次全会举行，习近平讲话总结和阐述党的十八大以来全面从严治党的经验：坚持思想建党和制度治党相统一，坚持使命引领和问题导向相统一，坚持抓“关键少数”和管“绝大多数”相统一，坚持行使权力和担当责任相统一，坚持严格管理和关心信任相统一，坚持党内监督和群众监督相统一。:star:3月以来，针对美国政府单方面挑起的中美经贸摩擦，中国不得不采取中止关税减让义务、加征关税等反制措施，并在相互尊重、平等互利的原则基础上进行协商，坚决捍卫国家和人民利益。:star:3月十三届全国人大《中华人民共和国宪法修正案》（以根本法形式确立党的领导地位）。:star:4月17日，习近平主持召开十九届中央国家安全委员会第一次会议，强调全面贯彻落实总体国家安全观，必须坚持**统筹发展和安全**两件大事，坚持人民安全、政治安全、国家利益至上的有机统一，坚持立足于防，又有效处置风险，坚持维护和塑造国家安全，坚持科学统筹。:star:5月18日－19日，全国生态环境保护大会举行，习近平讲话提出新时代推进生态文明建设的原则，强调要加快构建生态文明体系，大会总结并阐述了习近平生态文明思想。:star:6月，上海合作组织青岛峰会举行，10日，习近平主持并讲话，强调要提倡创新、协调、绿色、开放、共享的发展观，践行共同、综合、合作、可持续的安全观，秉持开放、融通、互利、共赢的合作观，树立平等、互鉴、对话、包容的文明观，坚持共商共建共享的全球治理观，不断改革完善全球治理体系，推动各国携手建设人类命运共同体。:star:7月，中共中央政治局召开会议，提出做好“六稳”工作，即稳就业、稳金融、稳外贸、稳外资、稳投资、稳预期。
 
-2019年。:star:1月2日，《告台湾同胞书》发表40周年纪念会举行，习近平发表**《为实现民族伟大复兴、推进祖国和平统一而共同奋斗》**的讲话，阐述立足新时代、在民族复兴伟大征程中推进祖国和平统一的5项重大政策主张：携手推动民族复兴，实现和平统一目标；探索“两制”台湾方案，丰富和平统一实践；坚持一个中国原则，维护和平统一前景；深化两岸融合发展，夯实和平统一基础；实现同胞心灵契合，增进和平统一认同。:star:6月香港爆发”修例风波“，以习近平同志为核心的党中央审时度势、果断决策，坚定支持香港特别行政区行政长官和政府及警队采取一系列举措，依法打击和惩治暴力犯罪活动，止暴制乱，恢复秩序。:star:7月5日，深化党和国家机构改革总结会议举行，习近平讲话指出，深化党和国家机构改革是对党和国家组织结构和管理体制的一次系统性、整体性重构，为完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化提供了有力组织保障。:star:10月，党的十九届四中全会，提出坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化的目标。:star:12月湖北省武汉市疾控中心通报发现，首例“不明原因”肺炎病例，此后上海广州北京等地都发现不明原因肺炎病例样本。
+2019年。:star:1月2日，《告台湾同胞书》发表40周年纪念会举行，习近平发表**《为实现民族伟大复兴、推进祖国和平统一而共同奋斗》**的讲话，阐述立足新时代、在民族复兴伟大征程中推进祖国和平统一的5项重大政策主张：携手推动民族复兴，实现和平统一目标；探索“两制”台湾方案，丰富和平统一实践；坚持一个中国原则，维护和平统一前景；深化两岸融合发展，夯实和平统一基础；实现同胞心灵契合，增进和平统一认同。:star:6月香港爆发”修例风波“，以习近平同志为核心的党中央审时度势、果断决策，坚定支持香港特别行政区行政长官和政府及警队采取一系列举措，依法打击和惩治暴力犯罪活动，止暴制乱，恢复秩序。:star:7月5日，深化党和国家机构改革总结会议举行，习近平讲话指出，深化党和国家机构改革是对党和国家组织结构和管理体制的一次系统性、整体性重构，为完善和发展中国特色社会主义制度、推进国家治理体系和治理能力现代化提供了有力组织保障。:star:10月，党的**十九届四中全会**，主题是“坚持和完善中国特色社会主义制度，推进国家治理体系和治理能力现代化”。:star:12月湖北省武汉市疾控中心通报发现，首例“不明原因”肺炎病例，此后上海广州北京等地都发现不明原因肺炎病例样本。
 
 2020年。:star:是全面建成小康社会的决胜期。:star:1月不明原因肺炎初步判定为新型冠状病毒。:star:1月15日，中美双方签署第一阶段经贸协议。:star:1月20日，钟南山证实新冠病毒“人传人”。:star:1月，**新冠疫情爆发**。:star:1月23日，武汉封城。:star:2月2日火神山医院交付使用。:star:2月7日李文亮殉职。:star:2月8日雷神山医院交付使用。:star:2月党中央决定成立中央港澳工作领导小组，取代原来设立的中央港澳工作协调小组。:star:2月23日，统筹推进新冠肺炎疫情防控和经济社会发展工作部署会议举行，习近平强调，要变压力为动力、善于化危为机，有序恢复生产生活秩序，强化“六稳”举措，加大政策调节力度，把我国发展的巨大潜力和强大动能充分释放出来。:star:3月5日，李文亮等34人被追授疫情防控先进个人称号。:star:3月12日世卫组织宣布新冠肺炎为全球性流行病。:star:3月13日美国进入“国家紧急状态”。:star:4月湖北省评定李文亮、夏思思等14名在疫情防控牺牲的一线人员为首批烈士。:star:4月4日天安门广场下半旗哀悼疫情牺牲烈士和逝世同胞。:star:4月8日零时零分，封城76天后，武汉解封。:star:4月17日，中央政治局会议提出，在加大“六稳”工作力度的同时，全面落实“六保”任务，即保居民就业、保基本民生、保市场主体、保粮食能源安全、保产业链供应链稳定、保基层运转。:star:5月22日－28日，十三届全国人大三次会议举行，会议通过**《中华人民共和国民法典》**，自2021年1月1日起施行，这是新中国成立以来第一部以“法典”命名的法律，是新时代我国社会主义法治建设的重大成果。:star:6月，十三届全国人大常委会第二十次会议通过《中华人民共和国香港特别行政区维护国家安全法》（**香港国安法**），并将其列入香港基本法附件三，明确由香港特别行政区在当地公布实施，对香港特别行政区维护国家安全制度机制作出法律化、规范化、明晰化的具体安排。:star:6月，6·15中印加勒万河谷边境冲突。:star:6月，北京疫情。:star:9月8日，全国抗击新冠肺炎疫情表彰大会举行。习近平讲话指出，在这场同严重疫情的殊死较量中，中国人民和中华民族以敢于斗争、敢于胜利的大无畏气概，铸就了生命至上、举国同心、舍生忘死、尊重科学、命运与共的伟大抗疫精神。:star:10月，党的十九届五中全会，《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》（《建议》，”十四五“规划的明确）。:star:11月，全国832个贫困县全部摘帽、12.8万个贫困村全部出列、近一亿贫困人口实现脱贫，消除了绝对贫困和区域性整体贫困。:star:12月28日－29日，中央农村工作会议举行，习近平讲话强调，脱贫攻坚取得胜利后，要全面推进乡村振兴，这是“三农”工作重心的历史性转移，坚持把解决好**“三农”问题**作为全党工作重中之重，举全党全社会之力推动乡村振兴。
 
 2020年到2035年：:star:在小康社会的基础上，在奋斗15年，基本实现社会主义现代化。
 
-2021年。:star:1月，吉林通化疫情。:star:2月25日全国脱贫攻坚总结表彰大会（我国脱贫攻坚战取得了全面胜利）。:star:3月，云南瑞丽疫情。:star:3月29日，全国扫黑除恶专项斗争总结表彰大会举行，强调要常态化推进扫黑除恶斗争。:star:6月28日　《中俄睦邻友好合作条约》延期。:star:7月1日中国共产党成立100周年。:star:7月17日-23日，河南郑州“7·20”特大暴雨灾害。:star:7月，江苏南京疫情（8月中旬结束）。:star:11月11日党的**十九届六中全会**，（**两个确立**）确立习思指导地位；《中共中央关于党的百年奋斗重大成就和历史经验的决议》，指出从进攻大城市转为向农村进军，是中国革命具有决定意义的新起点；十个坚持。:star:12月西安疫情。次年新冠疫苗开始接种。
+2021年。:star:1月，吉林通化疫情。:star:2月25日全国脱贫攻坚总结表彰大会（我国脱贫攻坚战取得了全面胜利）。:star:3月，云南瑞丽疫情。:star:3月29日，全国扫黑除恶专项斗争总结表彰大会举行，强调要常态化推进扫黑除恶斗争。:star:6月28日　《中俄睦邻友好合作条约》延期。:star:7月1日中国共产党成立100周年。:star:7月17日-23日，河南郑州“7·20”特大暴雨灾害。:star:7月，江苏南京疫情（8月中旬结束）。:star:11月11日党的**十九届六中全会**，（**两个确立**）确立习思指导地位；**《中共中央关于党的百年奋斗重大成就和历史经验的决议》**，指出从进攻大城市转为向农村进军，是中国革命具有决定意义的新起点；十个坚持。:star:12月西安疫情。次年新冠疫苗开始接种。
 
 2022年。:star:2月吉林市长春市疫情（4月下旬基本控制）。:star:3月上海疫情2020年以来最严重一次。:star:4月1日上海全域静态管理。:star:5月5日，习近平强调，要毫不动摇坚持“动态清零”总方针，坚决同一切歪曲、怀疑、否定我国防疫方针政策的言行作斗争。:star:6月1日上海解除全域静态管理。:star: 7月29日－30日，中央统战工作会议举行，习近平充分肯定百年统战的历史性贡献和新时代统战工作取得的历史性成就，阐明关于做好新时代党的统一战线工作的重要思想，分析新时代统战工作的历史方位，提出做好新时代统战工作的指导思想、基本任务、工作重点、政策举措，强调要加强党对统战工作的全面领导，坚持爱国统一战线发展的正确方向，促进政党关系、民族关系、宗教关系、阶层关系、海内外同胞关系和谐，促进海内外中华儿女团结奋斗，为全面建成社会主义现代化强国、实现中华民族伟大复兴汇聚伟力。:star:8月三亚疫情（全域静态管理，9月初基本得到控制）。:star:10月郑州疫情。:star:10月中国共产党第二十次全国代表大会（**党二十大**，主题：高举中国特色社会主义旗帜，全面贯彻新时代中国特色社会主义思想，弘扬伟大建党精神，自信自强、守正创新、踔厉奋发、勇毅前行，为全面建设社会主义现代化国家、全面推进中华民族伟大复兴而团结奋斗。中心任务是团结带领全国各族人民全面建成社会主义现代化强国、实现第二个百年奋斗目标，以中国式现代化全面推进中华民族伟大复兴；两个结合；六个坚持；中国式现代化的中国特色、本质要求、重大原则和重大意义）。:star:11月社会面病例数不断波动上升，部分地区静态管理。:star:12月7日除养老院、福利院、医疗机构、托幼机构、中小学等特殊场所外，不再查验核酸检测阴性证明，不再查验健康码和行程码；对于跨地区流动人员也不再查验，不再开展落地检，**疫情封控逐步放开**（全国各地）。:star:12月新增感染者快速增长。:star:12月25日，国家卫健委网站发布说明，从即日起，不再发布每日疫情信息，将由中国疾控中心发布相关疫情信息，供参考和研究使用。
 
@@ -487,3 +485,21 @@
 ![image-20231117102247197](assets/image-20231117102247197.png)
 ![image-20231117102302383](assets/image-20231117102302383.png)
 ![image-20231117102313096](assets/image-20231117102313096.png)
+
+# 资料
+
+[共产党新闻网—资料中心—历次党代会 ](http://cpc.people.com.cn/GB/64162/64168/index.html)
+
+[中国共产党一百年大事记（一）](http://politics.people.com.cn/n1/2021/0628/c1001-32141935.html)
+
+[中国共产党一百年大事记 （二）](http://hb.people.com.cn/n2/2021/0629/c194063-34798741.html)
+
+[中国共产党一百年大事记（三）](http://politics.people.com.cn/n1/2021/0630/c1001-32144355.html)
+
+[党的十九大以来大事记](http://politics.people.com.cn/n1/2022/1014/c1001-32544906.html)
+
+[中国共产党章程历次制定及修正概览_共产党员网 (12371.cn)](https://www.12371.cn/special/dzxd/)
+
+[历届全国人民代表大会历次会议_中国概况_中国政府网 (www.gov.cn)](https://www.gov.cn/guoqing/2006-02/23/content_2583944.htm)
+
+[现代史_历史概况_中国政府网 (www.gov.cn)](https://www.gov.cn/guoqing/2020-10/29/content_5555772.htm)
